--- a/data/equipment/weapon-02-FNDq4NFSN0g2HKWO.htm
+++ b/data/equipment/weapon-02-FNDq4NFSN0g2HKWO.htm
@@ -1,7 +1,6 @@
 Name: Handwraps of Mighty Blows
 Nom: Bandelettes de coups puissants (+1)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>As you invest these embroidered strips of cloth, you must meditate and slowly wrap them around your hands. These handwraps have weapon runes etched into them to give your unarmed attacks the benefits of those runes, making your unarmed attacks work like magic weapons. For example, <em>+1 striking handwraps of mighty blows</em> would give you a +1 item bonus to attack rolls with your unarmed attacks and increase the damage of your unarmed attacks from one weapon die to two (normally 2d4 instead of 1d4, but if your fists have a different weapon damage die or you have other unarmed attacks, use two of that die size instead).</p>
