--- a/data/equipment/weapon-04-V4wgOWYmHlbSZsVG.htm
+++ b/data/equipment/weapon-04-V4wgOWYmHlbSZsVG.htm
@@ -1,7 +1,6 @@
 Name: Crystal Shards (Moderate)
 Nom: Éclats de  cristal (modéré)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Usage</strong> held in 1 hand</p>
@@ -11,7 +10,7 @@ Nom: Éclats de  cristal (modéré)
 <p>Surfaces in the splash area grow brittle, gleaming red crystals that crumble to dust after 1 minute. The crystals on level surfaces are @Compendium[pf2e.equipment-srd.7fSnvJ2xoSfa6JXD]{Caltrops} (Core Rulebook 287). The crystals on vertical surfaces can be used briefly as handholds, granting the listed item bonus to the next Athletics check to @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Climb} each space. The crystals in each space crumble after the creature leaves, whether Climbing or moving through the caltrops.</p>
 ------ Description (fr) ------
 <p><strong>Utilisation</strong> Tenir à une main</p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Frappe</p>
-<hr>
+<p><strong>Activation</strong><strong>Activate</strong> <span class="pf2-icon">A</span>Frappe</p>
+<hr />
 <p>Cette bouteille contient un gaz rouge-brun sous pression parsemé de morceaux de cristal sublimé. Vous gagnez le bonus d'objet +1 pour les jets d'attaque. Lorsque la bombe explose, la cible subit 2d4 dégâts et 4 points d'éclaboussure perforants, car le mélange se transforme soudainement en cristaux solides volant à grande vitesse.</p>
 <p>Les surfaces dans la zone d'éclaboussure deviennent fragiles, des cristaux rouges luisants s'éffritant en poussière après 1 minute. Les cristaux sur les surfaces planes agissent alors comme des @Compendium[pf2e.equipment-srd.7fSnvJ2xoSfa6JXD]{Chausse-trappes}. Les cristaux sur les surfaces verticales peuvent être utilisés brièvement comme poignées, ce qui permet d'accorder le bonus de l'article énuméré au prochain test d'Athlétisme pour @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalader} chaque espace. Les cristaux de chaque case s'effritent après le départ de la créature, qu'elle soit en train d'Escalader ou de se déplacer dans les chausse-trappes.</p>
