--- a/data/equipment/weapon-04-WcuknnE3xYfSdbhm.htm
+++ b/data/equipment/weapon-04-WcuknnE3xYfSdbhm.htm
@@ -20,7 +20,7 @@ Nom: Bâton animal
 <p>L’extrémité supérieure de ce bâton est gravée de têtes de monstres et d’animaux. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests de Nature pour identifier des animaux</p>
 <p><strong>Activation</strong> Lancer un sort</p>> 
 <strong>Effet</strong>  Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
-<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts stockés</p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux indiqués</p>
 <ul>
 <li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.tXa5vOu5giBNCjdR]{Repérage} </li>
 <li><strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d’animal}, @Compendium[pf2e.spells-srd.EE7Q5BHIrfWNCPtT]{Morsure magique}</li>
