--- a/data/equipment/weapon-00-uM0OlCC1Sh6OLdNn.htm
+++ b/data/equipment/weapon-00-uM0OlCC1Sh6OLdNn.htm
@@ -5,4 +5,4 @@ Nom: Couteau de lancer
 ------ Description (en) ------
 <p>This light knife is optimally balanced to be thrown accurately at a greater distance than a common dagger. While this comes at the cost of a significant cutting edge, the difference is worth it for characters focused on thrown weapons.</p>
 ------ Description (fr) ------
-<p>Ce couteau de lancé est équilibré de manière parfaite pour être lancé avec précision à une plus grande distance qu'une dague commune. Bien que cela lui soit permis au prix d'une perte significative d'affûtage de la lame, la différence est importante pour des personnages concentrés sur les armes de jet.</p>
+<p>Ce couteau léger est équilibré de manière parfaite pour être lancé avec précision à une plus grande distance qu'une dague commune. Bien que cela lui soit permis au prix d'une perte significative d'affûtage de la lame, la différence est importante pour des personnages concentrés sur les armes de jet.</p>
