--- a/data/equipment/weapon-06-p1pysEaGypaNxTEL.htm
+++ b/data/equipment/weapon-06-p1pysEaGypaNxTEL.htm
@@ -20,7 +20,7 @@ Nom: Bâton de transmutation
 ------ Description (fr) ------
 <p>Un orbe de verre au sommet de ce bâton métallique contient du sable fin et ondoyant. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests pour identifier la magie de transmutation.</p>
 <p><strong>Activation</strong> Lancer un sort</p> 
-<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.<br></span></p>
+<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux indiqués.</p>
 <ul>
 <li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.AUctDF2fqPZN2w4W]{Symbole}</li>
