--- a/data/equipment/weapon-08-bT9azgpc96DNbitA.htm
+++ b/data/equipment/weapon-08-bT9azgpc96DNbitA.htm
@@ -22,7 +22,7 @@ Nom: Bâton animal (supérieur)
 <p>L’extrémité supérieure de ce bâton est gravée de têtes de monstres et d’animaux. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests de Nature pour identifier des animaux</p>
 <p><strong>Activation</strong> Lancer un sort</p> 
 <p><strong>Effet</strong> You expend a number of charges from the staff to cast a spell from its list.</p>
-<p><strong>Craft Requirements</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p><strong>Conditions de fabrication</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
 <li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.tXa5vOu5giBNCjdR]{Repérage} </li>
 <li><strong>Niveau 1&nbsp;</strong> @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d’animal}, @Compendium[pf2e.spells-srd.EE7Q5BHIrfWNCPtT]{Morsure magique}</li>
