--- a/data/equipment/weapon-11-jC8GmH0Un6vDxdMj.htm
+++ b/data/equipment/weapon-11-jC8GmH0Un6vDxdMj.htm
@@ -1,5 +1,5 @@
 Name: Acid Flask (Greater)
-Nom: Fiole d'acide (Supérieur)
+Nom: Fiole d'acide (supérieur)
 État: officielle
 
 ------ Description (en) ------
@@ -7,4 +7,4 @@ Nom: Fiole d'acide (Supérieur)
 <p>This flask filled with corrosive acid deals 1 acid damage, 3d6 persistent acid damage, and 3 acid splash damage. You gain a +2 item bonus to attack rolls.</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</p>
-<p>Cette fiole renferme un acide corrosif qui inflige les dégâts d’acide.Vous gagnez un bonus d’objet de +2 aux jets d’attaque. La fiole inflige 3d6 dégâts persistants d’acide et 3 dégâts d’éclaboussure d’acide.</p>
+<p>Cette fiole renferme un acide corrosif qui inflige les dégâts d’acide. Vous gagnez un bonus d’objet de +2 aux jets d’attaque. La fiole inflige 3d6 dégâts persistants d’acide et 3 dégâts d’éclaboussure d’acide.</p>
