--- a/data/equipment/weapon-12-DTIBj6Yhy73G5P6j.htm
+++ b/data/equipment/weapon-12-DTIBj6Yhy73G5P6j.htm
@@ -21,7 +21,8 @@ Nom: Bâton du mentaliste (majeur)
 </ul>
 ------ Description (fr) ------
 <p>Ce bâton de bois ciré est orné d’un motif bosselé ressemblant aux plis d’un cerveau. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests pour identifier la magie mentale.</p>
-<p><strong>Activation</strong> Lancer un sort; <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p><strong>Activation</strong> Lancer un sort</p> 
+<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <p><strong>Conditions de fabrication</strong>  Fournir une incantation de tous les sorts de la liste et à tous les niveaux indiqués.</p>
 <ul>
 <li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.4gBIw4IDrSfFHik4]{hHébètement}</li>
