--- a/data/equipment/weapon-14-kNvo4FNaiQRnZfO7.htm
+++ b/data/equipment/weapon-14-kNvo4FNaiQRnZfO7.htm
@@ -22,7 +22,7 @@ Nom: Bâton d'évocation (majeur)
 <li>+2 circumstance bonus to checks to identify evocation magic</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce bâton est effilé à une extrémité, l’autre étant taillée en forme de torsade ornée de pierres précieuses. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests pour iden‑ tifier la magie d’évocation. </p>
+<p>Ce bâton est effilé à une extrémité, l’autre étant taillée en forme de torsade ornée de pierres précieuses. Lorsque vous le maniez, vous bénéficiez d’un bonus de circonstances de +2 aux tests pour identifier la magie d’évocation. </p>
 <p><strong>Activation</strong> Lancer un sort </p> 
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux indiqués.</span></p>
@@ -38,5 +38,5 @@ Nom: Bâton d'évocation (majeur)
 <hr />
 <p>Code:</p>
 <ul>
-<li>Bonus de circonstances de +2 aux tests pour iden‑ tifier la magie d’évocation</li>
+<li>Bonus de circonstances de +2 aux tests pour identifier la magie d’évocation</li>
 </ul>
