--- a/data/equipment/weapon-14-MeUgw1hsSEcWP97G.htm
+++ b/data/equipment/weapon-14-MeUgw1hsSEcWP97G.htm
@@ -32,7 +32,7 @@ Nom: Bâton d'enchantement (majeure)
 <li><strong>Niveau 2 </strong>@Compendium[pf2e.spells-srd.tlSE7Ly8vi1Dgddv]{Fou rire}, @Compendium[pf2e.spells-srd.CQb8HtQ1BPeZmu9h]{Idiotie}</li>
 <li><strong>Niveau 3 </strong> @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralysie}</li>
 <li><strong>Niveau 4 </strong> @Compendium[pf2e.spells-srd.vLA0q0WOK2YPuJs6]{Charme}, @Compendium[pf2e.spells-srd.LiGbewa9pO0yjbsY]{Confusion}, @Compendium[pf2e.spells-srd.qwlh6aDgi86U3Q7H]{Suggestion}</li>
-<li><strong>Niveau 5 </strong> @Compendium[pf2e.spells-srd.aIHY2DArKFweIrpf]{Command}, @Compendium[pf2e.spells-srd.GaRQlC9Yw1BGKHfN]{Désespoir foudroyant}</li>
+<li><strong>Niveau 5 </strong> @Compendium[pf2e.spells-srd.aIHY2DArKFweIrpf]{Injonction}, @Compendium[pf2e.spells-srd.GaRQlC9Yw1BGKHfN]{Désespoir foudroyant}</li>
 <li><strong>Niveau 6 </strong> @Compendium[pf2e.spells-srd.OsOhx3TGIZ7AhD0P]{Domination}, @Compendium[pf2e.spells-srd.5BbU1V6wGSGbrmRD]{Débilité}</li>
 </ul>
 <hr />
