--- a/data/equipment/weapon-14-lOeShVkqV98KlvTI.htm
+++ b/data/equipment/weapon-14-lOeShVkqV98KlvTI.htm
@@ -33,7 +33,7 @@ Nom: Bâton de divination (majeur)
 <li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.HXhWYJviWalN5tQ2]{Clairaudience}, @Compendium[pf2e.spells-srd.pZTqGY1MLRjgKasV]{Darkvision}</li>
 <li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.zvKWclOZ7A53DObE]{Clairvoyance}, @Compendium[pf2e.spells-srd.vTQvfYu2llKQedmY]{Compréhension des langues}, @Compendium[pf2e.spells-srd.HqTI6wRrck1YXp3F]{Télépathie}</li>
 <li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Oeil indiscret}, @Compendium[pf2e.spells-srd.R9xqCBblkS5KE4y7]{Communication à distance}</li>
-<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.HqTI6wRrck1YXp3F]{Telepathy}, @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{Vision lucide}</li>
+<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.HqTI6wRrck1YXp3F]{Télépathie}, @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{Vision lucide}</li>
 </ul>
 <hr />
 <p>Code:</p>
