--- a/data/equipment/weapon-17-b1gx7ZhuFJAyJOo8.htm
+++ b/data/equipment/weapon-17-b1gx7ZhuFJAyJOo8.htm
@@ -9,5 +9,5 @@ Nom: Grenade d'épines de pesh (majeure)
 <p>You gain a +3 item bonus to attack rolls. The bomb deals 4d6 piercing damage and 4 piercing splash damage, and the target is stupefied 3.</p>
 ------ Description (fr) ------
 <p>Les grenades d'épines de pesh sont des bombes explosives enveloppées d'aiguilles traités alchimiquement à partir de cactus de Pesh. Une grenade d'épines de pesh inflige les dégâts perforants indiqués et des dégâts d'éclaboussure. Si elle atteint sa cible, cette dernière obtient la condition @Compendium[pf2e.conditionspf2e.e1XGnhKNSQIm5IXg]{Stupefiée} jusqu'à la fin de son prochain tour.</p>
-<p><span><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</span></p>>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</p>
 <p>Vous gagnez un bonus de +3 au jet d'attaque. La bombe inflige 4d6 dégâts perforants et 4 dégâts perforants d'éclaboussure et la cible est Stupéfiée 3.</p>
