--- a/data/equipment/weapon-22-Vz7nITDWjrXmyoJn.htm
+++ b/data/equipment/weapon-22-Vz7nITDWjrXmyoJn.htm
@@ -1,7 +1,6 @@
 Name: Kortos Diamond
 Nom: Diamant de Kortos
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>The hilt of this +3 major striking @Compendium[pf2e.equipment-srd.6xu6dPIaUZ7edKEB]{Axiomatic} @Compendium[pf2e.equipment-srd.payq4TwkN2BRF6fs]{Spell-Storing} longsword is simple and elegant. The blade itself is made of throneglass-a clear, jewellike crafting material with a razor-sharp edge, capable of absorbing psychic magic and redirecting it at the wielder's enemies. Whenever the Kortos Diamond is in an area of dim or brighter light, it glows faintly, as if reflecting the light of a setting sun.</p>
