--- a/data/spells/conjuration-01-D8cWhrzcsd43OlIX.htm
+++ b/data/spells/conjuration-01-D8cWhrzcsd43OlIX.htm
@@ -13,6 +13,6 @@ Nom: Pacte des Divs
 <p>Vous faites appel aux pouvoirs d'Abaddon pour vous accorder l'assistance d'un Div. Vous faites appel à un Div dont le niveau ne peut être supérieur au double du Niveau de sort du pacte du Div, à deux Divs dont les niveaux sont chacun au moins 2 de moins que le double du niveau de sort, ou à trois Divs dont les niveaux sont chacun au moins 3 de moins que le double du niveau de sort.</p>
 <hr />
 <p><strong>Succès critique</strong> Vous conjurez le ou les Divs, et ils n'exigent rien en retour de leurs services.</p>
-<p><strong>Success</strong> Vous avez invoqué le ou les Divs. Ils ne sont pas désireux de poursuivre la tâche, ils demandent donc une faveur en échange </p>
-<p><strong>Failure</strong> vous ne conjurez aucun Div.</p>
+<p><strong>Succès</strong> Vous avez invoqué le ou les Divs. Ils ne sont pas désireux de poursuivre la tâche, ils demandent donc une faveur en échange </p>
+<p><strong>Échec</strong> vous ne conjurez aucun Div.</p>
 <p><strong>Échec critique</strong> Vous ne conjurez aucun Div, et ils envoient un contrecoup spirituel qui vous prive de l'utilisation de tous vos sorts divins innés pendant 24 heures. Si vous êtes sous l'effet de l'un de vos sorts divins innés, les durées prennent fin.</p>
