--- a/data/equipment/weapon-00-UfurZQK6H6SgOjqe.htm
+++ b/data/equipment/weapon-00-UfurZQK6H6SgOjqe.htm
@@ -1,6 +1,6 @@
 Name: Ranseur
 Nom: Corsèque
-État: fficielle
+État: officielle
 
 ------ Description (en) ------
 <p>This polearm is a long trident with a central prong that's longer than the other two.</p>
