--- a/data/feats/class-02-tdtCwmYoBMKzfhEp.htm
+++ b/data/feats/class-02-tdtCwmYoBMKzfhEp.htm
@@ -1,14 +1,14 @@
 Name: Shining Oath (Redeemer)
-Nom: 
+Nom: Serment de lumière (Rédempteur)
 PrereqEN: |tenets of good|redeemer cause
-PrereqFR: 
-État: auto-trad
+PrereqFR: principes du bien|cause du rédempteur
+État: officielle
 
 ------ Description (en) ------
 <p>You've sworn an oath to put the undead to rest. Add the following tenet to your champion's code after the other tenets: "You must end the existence of undead you encounter as long as you have a reasonable chance of success; in the unlikely event you find a good undead, you can try to work out a more peaceful way to help it recover from its undead state rather than destroying it in combat, such as helping it complete its unfinished business and find peace."</p>
 <p>Your @Compendium[pf2e.actionspf2e.tuZnRWHixLArvaIf]{Glimpse of Redemption's} resistance against damage from an undead is 7 + your level.</p>
 <p>You don't consider undead to be legitimate authorities, even in nations ruled by undead.</p>
 ------ Description (fr) ------
-<p>Vous avez fait le serment de mettre un terme à l’existence des morts-vivants. Ajoutez le principe suivant à votre code, à la suite des autres : « Vous devez mettre un terme à l’existence des morts-vivants que vous rencontrez si vous avez des chances raisonnables d’y parvenir. Dans le cas très peu probable où vous rencontrez un mort-vivant d’alignement bon, vous pouvez tenter de trouver une solution plus pacifique pour l’aider à le soigner de son état de mort-vivant au lieu de le détruire en combat. Vous pouvez l’aider à résoudre le problème qui l’empêche de trouver le repos éternel, par exemple. »</p>
-<p>La résistance de votre @Compendium[pf2e.actionspf2e.tuZnRWHixLArvaIf]{Lueur de rédemption} aux dégâts infligés par un mort-vivant est de 7 + votre niveau.</p>
-<p>Vous ne considérez pas les morts-vivants comme des autorités légitimes, même dans les nations sur lesquelles ils règnent.</p>
+<p>Si vous utilisez @Compendium[pf2e.actionspf2e.IX1VlVCL5sFTptEE]{Pas libérateur} lorsqu'il est déclenché par un mort-vivant, votre allié bénéficie d'un bonus de circonstances de +4 aux tests accordés par votre Pas libérateur et l'allié peut @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} deux fois par la suite.</p>
+<p>La résistance contre les dégâts d'un mort vivant que vous confère votre @Compendium[pf2e.actionspf2e.tuZnRWHixLArvaIf]{Lueur de rédemption} est de 7 + votre niveau.</p>
+<p>Vous ne considérez pas les morts-vivants comme des autorités légitimes, même au sein des nations sur lesquelles ils règnent.</p>
