--- a/data/spells/evocation-03-JcobNl4iE9HmMYtE.htm
+++ b/data/spells/evocation-03-JcobNl4iE9HmMYtE.htm
@@ -54,9 +54,9 @@ Nom: Souffle de dragon
 <table class="pf2-table">
 <tbody >
 <tr>
-<td><strong >Type de dragon</strong></td>
-<td><strong >Zone et type de dégâts</strong></td>
-<td><strong >Jet de sauvegarde</strong></td>
+<td><strong>Type de dragon</strong></td>
+<td><strong>Zone et type de dégâts</strong></td>
+<td><strong>Jet de sauvegarde</strong></td>
 </tr>
 <tr>
 <td>Noir ou cuivre</td>
@@ -69,26 +69,26 @@ Nom: Souffle de dragon
 <td>Réflexes </td>
 </tr>
 <tr>
-<td>Airain </td>
+<td>Airain</td>
 <td>Ligne de feu de 18 mètres</td>
 <td>Réflexes</td>
 </tr>
 <tr>
-<td>Vert </td>
+<td>Vert</td>
 <td>Cône de poison de 9 mètres</td>
-<td>Vigueur </td>
+<td>Vigueur</td>
 </tr>
 <tr>
-<td>Or ou rouge </td>
+<td>Or ou rouge</td>
 <td>Cône de feu de 9 mètres</td>
 <td>Réflexes</td>
 </tr>
 <tr>
-<td>Argent ou blanc </td>
-<td>Cône de froid de 9 mètres </span></td>
-<td>Réflexes </td>
+<td>Argent ou blanc</td>
+<td>Cône de froid de 9 mètres</td>
+<td>Réflexes</td>
 </tr>
 </tbody>
 </table>
 <hr />
-<p><strong> Intensifié (+1)</strong> Les dégâts augmentent de [[/r 2d6]].</p>
+<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de [[/r 2d6]].</p>
