--- a/data/spells/evocation-03-bmDgIbLa5NfkP97J.htm
+++ b/data/spells/evocation-03-bmDgIbLa5NfkP97J.htm
@@ -1,12 +1,12 @@
 Name: Dragon Breath (Silver or White)
-Nom: 
-État: auto-trad
+Nom: Souffle de dragon (Argent ou Blanc)
+État: libre
 
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #cold]] cold damage in a 30-foot cone. Affected creatures can make a basic Reflex save.</p>
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by [[/r 2d6]].</p>
 ------ Description (fr) ------
-<p>Vous crachez de l'énergie de votre bouche, infligeant [[/r 5d6 #froid]] dégâts de froid dans un cône de 30 pieds. Les créatures affectées peuvent effectuer une sauvegarde de base en Réflexes.</p>
+<p>Vous crachez de l'énergie de votre bouche, infligeant [[/r 5d6 #froid]] dégâts de froid dans un cône de 9 mètres. Les créatures affectées peuvent effectuer une sauvegarde de base en Réflexes.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de [[/r 2d6]].</p>
