--- a/data/spells/necromancy-04-0qA4MfMkFklOz2Lk.htm
+++ b/data/spells/necromancy-04-0qA4MfMkFklOz2Lk.htm
@@ -1,6 +1,6 @@
 Name: Fearful Feast
-Nom: 
-État: auto-trad
+Nom: Festin d'émotions
+État: libre
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within range becomes frightened.</p>
@@ -15,14 +15,14 @@ Nom:
 <hr />
 <p>Heightened (+1) The damage increases by 2d4.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Une créature à portée devient effrayée.</p>
+<p><strong>Déclencheur</strong> Une créature à portée devient  @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé}.</p>
 <hr />
 <p>Vous ouvrez grand la bouche et inspirez fortement ; vous aspirez la bravoure, la confiance en soi et l'espoir auxquels s'accroche la cible effrayée, puis vous lui enlevez l'idée fausse que ces émotions fragiles peuvent la sauver de l'oubli de la terreur.</p>
 <p>Vous infligez [[/r 6d4 #mental]] des dégâts mentaux à la créature, qui doit tenter un jet de sauvegarde de Volonté.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> L'état d'effroi de la créature augmente de 1, et elle subit la moitié des dégâts.</p>
-<p><strong>Échec</strong> L'état d'effroi de la créature augmente de 2, et elle subit tous les dommages ; vous regagnez un nombre de points de vie égal à la moitié des dommages subis par la cible.</p>
-<p><strong>Échec critique</strong> L'état d'effroi de la créature augmente de 3 et elle subit des dégâts doubles ; vous regagnez un nombre de points de vie égal à la moitié des dégâts subis par la cible.</p>
+<p><strong>Échec</strong> L'état d'effroi de la créature augmente de 2, et elle subit tous les dégâts ; vous regagnez un nombre de points de vie égal à la moitié des dégâts subis par la cible.</p>
+<p><strong>Échec critique</strong> L'état d'effroi de la créature augmente de 3 et elle subit des dégâts doublés ; vous regagnez un nombre de points de vie égal à la moitié des dégâts subis par la cible.</p>
 <hr />
-<p>Intensifié (+1) Les dégâts augmentent de 2d4.</p>
+<p>Intensifié (+1) Les dégâts augmentent de [[/r 2d4]].</p>
