--- a/data/spells/abjuration-01-gMODOGamz88rgHuf.htm
+++ b/data/spells/abjuration-01-gMODOGamz88rgHuf.htm
@@ -1,7 +1,6 @@
 Name: Protection
 Nom: Protection
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You ward a creature against a specified alignment. Choose chaotic, evil, good, or lawful when you cast this spell. The target gains a +1 status bonus to Armor Class and saving throws against creatures and effects of the chosen alignment. This bonus increases to +3 against effects from such creatures that would directly control the target and against attacks made by summoned creatures of the chosen alignment.</p>
@@ -14,3 +13,7 @@ Nom: Protection
 <p> Vous protégez une créature contre un alignement spécifique.</p>
 <p>Choisissez entre chaotique, mauvais, bon ou loyal quand vous lancez ce sort. La cible gagne un bonus de statut de +1 à la Classe d’armure et aux jets de sauvegarde contre les créatures et effets de l’alignement choisi. Ce bonus passe à +3 contre les effets produits par ces créatures lorsqu’elles tentent de contrôler directement la cible, ainsi que contre les attaques des créatures convoquées de l’alignement choisi.</p>
 <p>Ce sort gagne le trait opposé à l’alignement choisi — si vous choisissez chaotique, ce sort gagne le trait loyal, et vice versa ; si vous choisissez mauvais, il gagne le trait bon, et vice versa.</p>
+<p>@Compendium[pf2e.spell-effects.lpqkZkslFMirsItL]{Effet : Protection du Chaos}</p>
+<p>@Compendium[pf2e.spell-effects.nEqBnsrvJZzh8Bil]{Effet : Protection du Mal}</p>
+<p>@Compendium[pf2e.spell-effects.qVngSDWvHcnht0fP]{Effet : Protection du Bien}</p>
+<p>@Compendium[pf2e.spell-effects.B6zSwNFJV3TMafHf]{Effet : Protection du Loyal}</p>
