--- a/data/spells/abjuration-01-rMOI8JFJ0nT2mrCF.htm
+++ b/data/spells/abjuration-01-rMOI8JFJ0nT2mrCF.htm
@@ -1,7 +1,6 @@
 Name: Phase Familiar
 Nom: Déphasage de familier
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your familiar would take damage.</p>
