--- a/data/spells/abjuration-02-fWU7Qjp1JiX9g6eg.htm
+++ b/data/spells/abjuration-02-fWU7Qjp1JiX9g6eg.htm
@@ -1,7 +1,6 @@
 Name: Animus Mine
 Nom: Mine psychique
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You implant a mental mine within your psyche that detonates against anyone attempting to manipulate your thoughts. You can use a single action, which has the concentrate trait, to suppress the effects of the mine for 1 round to allow someone to safely use a mental effect on you. You can Dismiss the spell.<br /><br />The first creature that uses a mental effect against you triggers the animus mine, causing the spell to end. The animus mine deals 4d8 mental damage to the triggering creature, which must attempt a Will save.</p>
@@ -13,11 +12,12 @@ Nom: Mine psychique
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 2d8.</p>
 ------ Description (fr) ------
-<p>Vous implantez une mine mentale dans votre esprit qui explose contre quiconque tente pour manipuler vos pensées. Vous pouvez utiliser une action unique qui a le trait concentration pour supprimer les effets de la mine pendant 1 tour açn de permettre à quelqu'un d'utiliser en toute sécurité un effet mental sur vous. Vous pouvez Révoquer le sort.<br /><br />La première créature qui utilise un effet mental contre vous déclenche mine psychique, provoquant la fin du sort. Mine psychique inflige 4d8 de dommages mentaux à la créature déclencheuse, qui doit effectuer un jet de sauvegarde de Volonté.</p>
+<p>Vous implantez une mine mentale dans votre esprit qui explose contre quiconque tente pour manipuler vos pensées. Vous pouvez utiliser une action unique qui a le trait concentration pour supprimer les effets de la mine pendant 1 tour afin de permettre à quelqu'un d'utiliser en toute sécurité un effet mental sur vous. Vous pouvez Révoquer le sort.</p>
+<p>La première créature qui utilise un effet mental contre vous déclenche mine psychique, provoquant la fin du sort. Mine psychique inflige 4d8 dégâts mentaux à la créature déclencheuse, qui doit effectuer un jet de sauvegarde de Volonté.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts.</p>
-<p><strong>Échec</strong> La créature subit la totalité des dommages et @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdi} 1.</p>
+<p><strong>Échec</strong> La créature subit la totalité des dégâts et se retrouve @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdi} 1.</p>
 <p><strong>Échec critique</strong> La créature subit le double des dégâts et est Étourdie 1. Vous n'êtes pas affecté par l'effet mental déclencheur.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 2d8.</p>
