--- a/data/spells/abjuration-02-FzAtX8yXBjTaisJK.htm
+++ b/data/spells/abjuration-02-FzAtX8yXBjTaisJK.htm
@@ -1,7 +1,6 @@
 Name: Undetectable Alignment
 Nom: Alignement indétectable
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You shroud a creature or object in wards that hide its alignment. The target appears to be neutral to all effects that would detect its alignment.</p>
