--- a/data/spells/abjuration-04-caehfpQz7yp9yNzz.htm
+++ b/data/spells/abjuration-04-caehfpQz7yp9yNzz.htm
@@ -1,7 +1,6 @@
 Name: Dutiful Challenge
 Nom: Défi respectueux
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>As you challenge an enemy, you take some of its attention away from your allies. The target takes a -1 status penalty to attack rolls, damage rolls, and skill checks against creatures other than you, and you take a -1 status penalty to attack rolls, damage rolls, and skill checks against creatures other than the target.</p>
@@ -11,6 +10,7 @@ Nom: Défi respectueux
 <p>@Compendium[pf2e.spell-effects.UH2sT6eW5e31Xytd]{Spell Effect: Dutiful Challenge}</p>
 ------ Description (fr) ------
 <p>Lorsque vous défiez un ennemi, vous détournez une part de son attention de vos alliés.</p>
-<p>La cible subit une pénalité de statut de -1 à ses jets d'attaques, ses jets de dégâts et à ses tests de compétence dirigés contre les créatures autres que vous et vous subissez une pénalité de statut de -1 aux jets d'attaque, aux jets de dégâts et aux tests de compétences diriges contre des créatures autres que la cible. Chaque fois qu'une créature autre que vous utilise une action hostile qui affecte l'ennemi ainsi défié, l'ennemi peut tenter un jet de Volonté. Sur un succès, l'ennemi ne subit plus la pénalité contre cette créature. Vous pouvez révoquer le sort et il se termine automatiquement si vous ou la cible êtes vaincu.</p>
+<p>La cible subit une pénalité de statut de -1 à ses jets d'attaques, ses jets de dégâts et à ses tests de compétence dirigés contre les créatures autres que vous et vous subissez une pénalité de statut de -1 aux jets d'attaque, aux jets de dégâts et aux tests de compétences dirigés contre des créatures autres que la cible. Chaque fois qu'une créature autre que vous utilise une action hostile qui affecte l'ennemi ainsi défié, l'ennemi peut tenter un jet de Volonté. Sur un succès, l'ennemi ne subit plus la pénalité contre cette créature. Vous pouvez révoquer le sort et il se termine automatiquement si vous ou la cible êtes vaincu.</p>
 <hr />
 <p><strong>Intensifié (+3)</strong> La pénalité de statut augmente de 1.</p>
+<p>@Compendium[pf2e.spell-effects.UH2sT6eW5e31Xytd]{Effet : Défi respectueux}</p>
