--- a/data/spells/abjuration-04-OsrtOeG0TvDNnEFH.htm
+++ b/data/spells/abjuration-04-OsrtOeG0TvDNnEFH.htm
@@ -1,7 +1,6 @@
 Name: Safeguard Secret
 Nom: Secret bien gardé
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You ensure a secret remains safe from prying spies.</p>
@@ -12,3 +11,4 @@ Nom: Secret bien gardé
 ------ Description (fr) ------
 <p>Vous garantissez qu’un secret restera bien gardé des espions indiscrets. Choisissez un élément d’information que certaines cibles au moins connaissent ; vous pouvez cibler une créature uniquement si elle reste dans la portée pendant toute la minute durant laquelle vous Lancez le sort. Le sort octroie à ceux qui détiennent l’élément de connaissance que vous avez choisi un bonus de statut de +4 aux tests de compétences (généralement les tests de Duperie) pour masquer cette connaissance et aux jets de sauvegarde contre les sorts qui tentent spécifiquement de l’obtenir auprès d’eux et contre les effets qui les forceraient à la révéler.</p>
 <p>Si vous Lancez de nouveau ce sort, tout secret bien gardé que vous avez précédemment lancé prend fin.</p>
+<p>@Compendium[pf2e.spell-effects.3HEiYVhqypfc4IsP]{Effet : Secret bien gardé}</p>
