--- a/data/spells/abjuration-04-SSsUC7rZo0CwayPn.htm
+++ b/data/spells/abjuration-04-SSsUC7rZo0CwayPn.htm
@@ -1,7 +1,6 @@
 Name: Retributive Pain
 Nom: Souffrance vengeresse
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature in range damages you.</p>
