--- a/data/spells/abjuration-04-tYLBjOTvBVn9JtRb.htm
+++ b/data/spells/abjuration-04-tYLBjOTvBVn9JtRb.htm
@@ -1,7 +1,6 @@
 Name: Unity
 Nom: Unité
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You and 1 or more allies within range are targeted by a spell or ability that allows a saving throw.</p>
@@ -9,5 +8,5 @@ Nom: Unité
 <p>You put up a united defense. Each ally can use your saving throw modifier instead of its own against the triggering spell. Each ally decides individually which modifier to use.</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous et 1 allié ou plus à portée êtes la cible d’un sort ou d’un pouvoir qui autorise un jet de sauvegarde.</p>
-<hr>
+<hr />
 <p>Vous opposez une défense conjointe. Chaque allié peut utiliser votre modificateur au jet de sauvegarde au lieu du sien contre le sort déclencheur. Chaque allié décide quel modificateur il souhaite utiliser.</p>
