--- a/data/spells/abjuration-04-y7Tusv3CieZktkkV.htm
+++ b/data/spells/abjuration-04-y7Tusv3CieZktkkV.htm
@@ -1,7 +1,6 @@
 Name: Flame Barrier
 Nom: Barrière de flammes
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An effect would deal fire damage to either you or an ally within range.</p>
@@ -11,7 +10,7 @@ Nom: Barrière de flammes
 <p><strong>Heightened (+2)</strong> The resistance increases by 5.</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Un effet qui devrait vous infliger des dégâts de feu, à vous ou à un allié situé dans la portée.</p>
-<hr>
+<hr />
 <p>Vous déviez rapidement les flammes en approche. La cible gagne une résistance au feu de 15 contre l’effet déclencheur.</p>
-<hr>
+<hr />
 <p><strong>Intensifié (+2)</strong> La résistance augmente de 5.</p>
