--- a/data/spell-effects/04-3HEiYVhqypfc4IsP.htm
+++ b/data/spell-effects/04-3HEiYVhqypfc4IsP.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Safeguard Secret
-Nom: Secret bien gardé
+Nom: Effet : Secret bien gardé
 État: officielle
 
 ------ Description (en) ------
