--- a/data/spells/abjuration-04-yY1H5zhO5dHmD8lz.htm
+++ b/data/spells/abjuration-04-yY1H5zhO5dHmD8lz.htm
@@ -1,7 +1,6 @@
 Name: Font of Serenity
 Nom: Source de sérénité
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>A divine beacon radiates serenity, soothing nearby allies.</p>
@@ -12,6 +11,8 @@ Nom: Source de sérénité
 <p><strong>Heightened (+4)</strong> The bonus increases by 1.</p>
 ------ Description (fr) ------
 <p>Un fanal divin irradie la sérénité, réconfortant vos alliés proches.</p>
-<p>Les alliés dans la zone obtiennent un bonus de statut de +1 à leurs jets de sauvegarde contre les effets d'émotion. Un allié peut toucher la source au prix d'une action Interagir ; S'ils le font, le sort tente de contrer un effet d'émotion au choix de l'allié, après quoi cet effet d'émotion devient immunisé pendant 1 jour. Si le sort réussit le test de contre, il retire l'effet d'émotion de votre allié, mais pas des autres créatures que cet effet pourrait aussi être en train d'affecter.</p>
+<p>Les alliés dans la zone obtiennent un bonus de statut de +1 à leurs jets de sauvegarde contre les effets d'émotion</p> 
+<p>@Compendium[pf2e.spell-effects.Bc2Bwuan3716eAyY]{Effet : Source de sérénité}</p>
+<p>Un allié peut toucher la source au prix d'une action Interagir ; S'ils le font, le sort tente de contrer un effet d'émotion au choix de l'allié, après quoi cet effet d'émotion devient immunisé pendant 1 jour. Si le sort réussit le test de contre, il retire l'effet d'émotion de votre allié, mais pas des autres créatures que cet effet pourrait aussi être en train d'affecter.</p>
 <hr />
 <p><strong>Intensifié (+4)</strong> Le bonus augmente de 1.</p>
