--- a/data/spells/abjuration-05-bay4AfSu2iIozNNW.htm
+++ b/data/spells/abjuration-05-bay4AfSu2iIozNNW.htm
@@ -1,7 +1,6 @@
 Name: Banishment
 Nom: Bannissement
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You send the target back to its home plane. The target must attempt a Will save. You can spend an extra action while Casting this Spell and add a material component to give the creature a -2 circumstance penalty to its save. The component must be a specially gathered object that is anathema to the creature, and not from a material component pouch. This spell fails if you aren't on your home plane when you cast it.</p>
