--- a/data/spells/abjuration-05-jQdm301h6e8hIY4U.htm
+++ b/data/spells/abjuration-05-jQdm301h6e8hIY4U.htm
@@ -1,7 +1,6 @@
 Name: Spiritual Guardian
 Nom: Gardien spirituel
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A Medium guardian made of magical force appears and attacks foes you designate within range. The spiritual guardian is translucent and appears to be holding your deity's favored weapon.</p>
