--- a/data/spells/abjuration-05-YvXKGlHOt7mdW2jZ.htm
+++ b/data/spells/abjuration-05-YvXKGlHOt7mdW2jZ.htm
@@ -1,7 +1,6 @@
 Name: Death Ward
 Nom: Protection contre la mort
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You shield a creature from the ravages of negative energy.</p>
@@ -10,3 +9,4 @@ Nom: Protection contre la mort
 ------ Description (fr) ------
 <p>Vous protégez une créature contre les ravages de l’énergie négative.</p>
 <p>Elle reçoit un bonus de statut de +4 aux jets de sauvegarde contre la mort et les effets négatifs, une résistance de 10 contre le négatif et elle est débarrassée des effets de l’état @Compendium[pf2e.conditionitems.3uh1r86TzbQvosxv]{Condamné}.</p>
+<p>@Compendium[pf2e.spell-effects.s6CwkSsMDGfUmotn]{Effet : Protection contre la mort}</p>
