--- a/data/spells/abjuration-07-bVtkBJvGLP69qVGI.htm
+++ b/data/spells/abjuration-07-bVtkBJvGLP69qVGI.htm
@@ -1,7 +1,6 @@
 Name: Unfettered Pack
 Nom: Meute sans entrave
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You free those who travel alongside you from environmental hindrances. Targets don't take circumstance penalties to Speed from vegetation, rubble, winds, or other properties of the environment, whether or not the environment is magical, and they ignore difficult terrain from such environmental properties.</p>
@@ -9,5 +8,5 @@ Nom: Meute sans entrave
 <p><strong>Heightened (9th)</strong> The targets also ignore greater difficult terrain from environmental properties.</p>
 ------ Description (fr) ------
 <p>Vous libérez ceux qui voyagent à vos côtés des obstacles environnementaux. Les cibles ne subissent pas de malus de circonstances à la Vitesse dus à la végétation, aux décombres, aux vents ou autres propriétés de l’environnement, qu’il soit magique ou non, et elles ignorent les terrains difficiles de telles propriétés environnementales.</p>
-<hr>
-<p><strong>Intensifié (9th)</strong> Les cibles ignorent également les terrains difficiles supérieurs des propriétés environnementales.</p>
+<hr />
+<p><strong>Intensifié (9ème)</strong> Les cibles ignorent également les terrains difficiles supérieurs des propriétés environnementales.</p>
