--- a/data/spells/abjuration-07-m2xFMNyQiUKQDRaj.htm
+++ b/data/spells/abjuration-07-m2xFMNyQiUKQDRaj.htm
@@ -1,7 +1,6 @@
 Name: Energy Aegis
 Nom: Égide énergétique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You protect the target with a powerful, long-lasting energy barrier. The target gains resistance 5 to acid, cold, electricity, fire, force, negative, positive, and sonic damage.</p>
@@ -9,5 +8,5 @@ Nom: Égide énergétique
 <p><strong>Heightened (9th)</strong> The resistances increase to 10.</p>
 ------ Description (fr) ------
 <p>Vous protégez la cible avec une puissante barrière d’énergie qui persiste longtemps. La cible gagne une résistance 5 contre les dégâts d’acide, de froid, d’électricité, de feu, de force, négatifs, positifs et de son.</p>
-<hr>
-<p><strong>Intensifié (9e)</strong> Les résistances passent à 10.</p>
+<hr />
+<p><strong>Intensifié (9ème)</strong> Les résistances passent à 10.</p>
