--- a/data/spells/abjuration-08-iL6TujgTCtRRa0Y0.htm
+++ b/data/spells/abjuration-08-iL6TujgTCtRRa0Y0.htm
@@ -1,6 +1,6 @@
 Name: Prismatic Wall
 Nom: Mur prismatique
-État: cofficielle
+État: officielle
 
 ------ Description (en) ------
 <p>You create an opaque wall of shimmering, multicolored light. The wall is straight and vertical, stretching 60 feet long and 30 feet high. You must form the wall in an unbroken open space so its edges don't pass through any creatures or objects, or the spell is lost. You can pass through the wall and ignore its effects. The wall sheds bright light out to 20 feet on each side (and dim light to the next 20 feet). Creatures other than you that come into the wall's light must attempt a Will save; they're @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Dazzled} for 1 round on a success, @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} for 1 round on a failure, and Blinded for 1 minute on a critical failure. They are then temporarily immune to the blinding effect for 1 hour.</p>
