--- a/data/spells/conjuration-00-uZK2BYzPnxUBnDjr.htm
+++ b/data/spells/conjuration-00-uZK2BYzPnxUBnDjr.htm
@@ -1,7 +1,6 @@
 Name: Tanglefoot
 Nom: Entrave
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A vine covered in sticky sap appears from thin air, flicking from your hand and lashing itself to the target. Attempt a spell attack against the target.</p>
@@ -15,7 +14,11 @@ Nom: Entrave
 <p><strong>Heightened (4th)</strong> The effects last for 1 minute.</p>
 ------ Description (fr) ------
 <p>Une liane couverte de sève collante apparaît comme par magie, sortant rapidement de votre main, et s’arrime à la cible. Faites une attaque de sort contre la cible.</p>
-<hr>
-<p><strong>Succès critique</strong>&nbsp; La cible gagne l’état @Compendium[pf2e.conditionspf2e.eIcWbB5o3pP6OIMe]{immobilisé} et subit un malus de circonstances de −3 m à ses Vitesses pendant 1 round. Elle peut tenter de S’échapper contre votre DD de sorts pour retirer le malus et l’état immobilisé.<br><strong>Succès.&nbsp;</strong>La cible subit un malus de circonstances de −3 m à ses Vitesses pendant 1 round. Elle peut tenter de S’échapper contre votre DD de sorts pour retirer le malus.<br><strong>Échec.&nbsp;</strong> La cible n’est pas affectée.</p>
-<hr>
-<p><strong>Intensifié (2ème)</strong>&nbsp; Les effets durent 2 rounds<br><strong>Intensifié (4ème)</strong>&nbsp;Les effets durent 1 minute.</p>
+<p>@Compendium[pf2e.spell-effects.TwtUIEyenrtAbeiX]{Effet : Entrave}</p>
+<hr />
+<p><strong>Succès critique</strong> La cible gagne l’état @Compendium[pf2e.conditionspf2e.eIcWbB5o3pP6OIMe]{Immobilisé} et subit un malus de circonstances de −3 mètres à ses Vitesses pendant 1 round. Elle peut tenter de S’échapper contre votre DD de sorts pour retirer le malus et l’état immobilisé.</p>
+<p><strong>Succès</strong>La cible subit un malus de circonstances de −3 mètres à ses Vitesses pendant 1 round. Elle peut tenter de S’échapper contre votre DD de sorts pour retirer le malus.</p>
+<p><strong>Échec</strong> La cible n’est pas affectée.</p>
+<hr />
+<p><strong>Intensifié (2ème)</strong>Les effets durent 2 rounds</p>
+<p><strong>Intensifié (4ème)</strong>Les effets durent 1 minute.</p>
