--- a/data/spells/conjuration-01-dDt8VFuLuhznT19v.htm
+++ b/data/spells/conjuration-01-dDt8VFuLuhznT19v.htm
@@ -1,7 +1,6 @@
 Name: Snare Hopping
 Nom: Piège artisanal bondissant
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You may not have placed your snare in the right place, but you can magically move it there. You teleport the target snare to another unoccupied location in range.</p>
@@ -9,5 +8,5 @@ Nom: Piège artisanal bondissant
 <p><strong>Heightened (+1)</strong> The range of the spell increases by 10 feet.</p>
 ------ Description (fr) ------
 <p>Vous pouvez ne pas avoir placé vos pièges artisanaux à la bonne place, mais vous pouvez magiquement les y déplacer. Vous téléportez le piège artisanal cible dans un autre lieu à portée.</p>
-<hr>
-<p><strong>Intensifié (+1)</strong> La portée du sort augmente de 3 m.</p>
+<hr />
+<p><strong>Intensifié (+1)</strong> La portée du sort augmente de 3 mètres.</p>
