--- a/data/spells/conjuration-01-jSRAyd57kd4WZ4yE.htm
+++ b/data/spells/conjuration-01-jSRAyd57kd4WZ4yE.htm
@@ -1,7 +1,6 @@
 Name: Summon Plant or Fungus
 Nom: Convocation de plante ou de champignon
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You conjure a plant or fungus to fight for you. This works like summon animal, except you summon a common creature that has the plant or fungus trait and whose level is -1.</p>
@@ -16,14 +15,14 @@ Nom: Convocation de plante ou de champignon
 <p><strong>Heightened (9th)</strong> Level 13</p>
 <p><strong>Heightened (10th)</strong> Level 15</p>
 ------ Description (fr) ------
-<p> Vous conjurez une plante ou un champignon qui se bat pour vous. Cela fonctionne comme convocation d’animal (page 329), excepté que vous convoquez une créature ordinaire qui a le trait plante ou champignon et dont le niveau est de −1.</p>
+<p> Vous conjurez une plante ou un champignon qui se bat pour vous. Cela fonctionne comme @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d'animal}, excepté que vous convoquez une créature ordinaire qui a le trait plante ou champignon et dont le niveau est de −1.</p>
 <hr>
-<p><strong>Intensifié. (2e)</strong> Niveau 1</p>
-<p><strong>Intensifié. (3e)</strong> Niveau 2</p>
-<p><strong>Intensifié. (4e)</strong> Niveau 3</p>
-<p><strong>Intensifié. (5e)</strong> Niveau 5</p>
-<p><strong>Intensifié. (6e)</strong> Niveau 7</p>
-<p><strong>Intensifié. (7e)</strong> Niveau 9</p>
-<p><strong>Intensifié. (8e)</strong> Niveau 11</p>
-<p><strong>Intensifié. (9e)</strong> Niveau 13</p>
-<p><strong>Intensifié. (10e)</strong> Niveau 15</p>
+<p><strong>Intensifié. (2ème)</strong> Niveau 1</p>
+<p><strong>Intensifié. (3ème)</strong> Niveau 2</p>
+<p><strong>Intensifié. (4ème)</strong> Niveau 3</p>
+<p><strong>Intensifié. (5ème)</strong> Niveau 5</p>
+<p><strong>Intensifié. (6ème)</strong> Niveau 7</p>
+<p><strong>Intensifié. (7ème)</strong> Niveau 9</p>
+<p><strong>Intensifié. (8ème)</strong> Niveau 11</p>
+<p><strong>Intensifié. (9ème)</strong> Niveau 13</p>
+<p><strong>Intensifié. (10ème)</strong> Niveau 15</p>
