--- a/data/spells/conjuration-02-9XHmC2JgTUIQ1CCm.htm
+++ b/data/spells/conjuration-02-9XHmC2JgTUIQ1CCm.htm
@@ -1,9 +1,8 @@
 Name: Obscuring Mist
 Nom: Brume de dissimulation
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You call forth a cloud of mist. All creatures within the mist become @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed}, and all creatures outside the mist become Concealed to creatures within it. You can Dismiss the cloud.</p>
 ------ Description (fr) ------
-<p>Vous faites apparaître un nuage brumeux. Toutes les créatures dans la brume deviennent masquées et toutes celles à l’extérieur deviennent masquées vis-à-vis des créatures à l’intérieur. Vous pouvez Révoquer le nuage.</p>
+<p>Vous faites apparaître un nuage brumeux. Toutes les créatures dans la brume deviennent @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masquées} et toutes celles à l’extérieur deviennent masquées vis-à-vis des créatures à l’intérieur. Vous pouvez Révoquer le nuage.</p>
