--- a/data/spells/conjuration-02-9s5tqqXNzcoKamWx.htm
+++ b/data/spells/conjuration-02-9s5tqqXNzcoKamWx.htm
@@ -1,6 +1,6 @@
 Name: Web
 Nom: Toile d'araignée
-État: cofficielle
+État: officielle
 
 ------ Description (en) ------
 <p>You create a sticky web in the area that impedes creatures' movement each time they try to move through it. Squares filled with the web are difficult terrain. Each square can be cleared of the web by a single attack or effect that deals at least 5 slashing damage or 1 fire damage. A square has AC 5, and it automatically fails its saving throws.</p>
