--- a/data/spells/conjuration-00-yvs1zN5Pai5U4CJX.htm
+++ b/data/spells/conjuration-00-yvs1zN5Pai5U4CJX.htm
@@ -9,4 +9,4 @@ Nom: Convocation d'instrument
 ------ Description (fr) ------
 <p>Vous matérialisez un @Compendium[pf2e.equipment-srd.MPv5Yx4w7scZGj2Y]{Instrument de musique (portatif)} dans votre main. L'instrument est banal pour son type, mais vous seul pouvez en jouer. L'instrument s'évanouit lorsque le sort se termine. Si vous lancez encore Convocation d'instrument, tout instrument que vous avez auparavant convoqué disparaît.</p>
 <hr />
-<p><strong>Intensifié (5ème)</strong> L'instrument est un @Compendium[pf2e.equipment-srd.3ld14dsn2RLu9owg]{Instrument de musique (Virtuose)}</p>
+<p><strong>Intensifié (5e)</strong> L'instrument est un @Compendium[pf2e.equipment-srd.3ld14dsn2RLu9owg]{Instrument de musique (Virtuose)}</p>
