--- a/data/spells/conjuration-02-lpT6LotUaQPfinjj.htm
+++ b/data/spells/conjuration-02-lpT6LotUaQPfinjj.htm
@@ -16,11 +16,11 @@ Nom: Convocation d'élémentaire
 ------ Description (fr) ------
 <p>Vous conjurez un élémentaire qui se bat pour vous. Cela fonctionne comme @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d'animal}, excepté que vous convoquez une créature ordinaire qui a le trait élémentaire et dont le niveau est de 1 ou inférieur.</p>
 <hr />
-<p><strong>Intensifié (3ème)</strong> Niveau 2</p>
-<p><strong>Intensifié (4ème)</strong> Niveau 3</p>
-<p><strong>Intensifié (5ème)</strong> Niveau 5</p>
-<p><strong>Intensifié (6ème)</strong> Niveau 7</p>
-<p><strong>Intensifié (7ème)</strong> Niveau 9</p>
-<p><strong>Intensifié (8ème</strong>  Niveau 11</p>
-<p><strong>Intensifié (9ème)</strong> Niveau 13</p>
-<p><strong>Intensifié (10ème)</strong> Niveau 15</p>
+<p><strong>Intensifié (3e)</strong> Niveau 2</p>
+<p><strong>Intensifié (4e)</strong> Niveau 3</p>
+<p><strong>Intensifié (5e)</strong> Niveau 5</p>
+<p><strong>Intensifié (6e)</strong> Niveau 7</p>
+<p><strong>Intensifié (7e)</strong> Niveau 9</p>
+<p><strong>Intensifié (8e</strong>  Niveau 11</p>
+<p><strong>Intensifié (9e)</strong> Niveau 13</p>
+<p><strong>Intensifié (10e)</strong> Niveau 15</p>
