--- a/data/spells/conjuration-05-29ytKctjg7qSW2ff.htm
+++ b/data/spells/conjuration-05-29ytKctjg7qSW2ff.htm
@@ -1,7 +1,6 @@
 Name: Summon Fiend
 Nom: Convocation de fiélon
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You conjure a fiend to fight on your behalf. This works like summon animal, except you summon a common creature that has the fiend trait and whose level is 5 or lower. You can't summon a creature unless its alignment is one of your deity's preferred alignments (or, if you don't have a deity, is within one step of your alignment). At the GM's discretion, some deities might restrict specific types of fiends, even if their alignments match.</p>
@@ -13,9 +12,9 @@ Nom: Convocation de fiélon
 <p><strong>Heightened (10th)</strong> Level 15</p>
 ------ Description (fr) ------
 <p>Vous conjurez un fiélon qui se bat pour vous. Cela fonctionne comme convocation d’animal, excepté que vous convoquez une créature ordinaire qui a le trait fiélon et dont le niveau est de 5 ou inférieur. Vous ne pouvez convoquer une créature que si son alignement est l’un des alignements favoris de votre divinité (ou, si vous n’avez pas de divinité, l’un des échelons de votre alignement). À la discrétion du MJ, certaines divinités peuvent restreindre certains types de fiélons, même si leurs alignements correspondent.</p>
-<hr>
-<p><strong>Intensifié (6th)</strong> niveau 7</p>
-<p><strong>Intensifié (7th)</strong> niveau 9</p>
-<p><strong>Intensifié (8th)</strong> niveau 11</p>
-<p><strong>Intensifié (9th)</strong> niveau 13</p>
-<p><strong>Intensifié (10th)</strong> niveau 15</p>
+<hr />
+<p><strong>Intensifié (6e)</strong> niveau 7</p>
+<p><strong>Intensifié (7e)</strong> niveau 9</p>
+<p><strong>Intensifié (8e)</strong> niveau 11</p>
+<p><strong>Intensifié (9e)</strong> niveau 13</p>
+<p><strong>Intensifié (10e)</strong> niveau 15</p>
