--- a/data/spells/conjuration-05-e9UJoVYUd5kJWUpi.htm
+++ b/data/spells/conjuration-05-e9UJoVYUd5kJWUpi.htm
@@ -1,7 +1,6 @@
 Name: Summon Giant
 Nom: Convocation de géant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You conjure a giant to fight for you. This works like summon animal, except you summon a common creature that has the giant trait and whose level is 5 or lower.</p>
@@ -13,9 +12,9 @@ Nom: Convocation de géant
 <p><strong>Heightened (10th)</strong> Level 15</p>
 ------ Description (fr) ------
 <p>Vous conjurez un géant qui se bat pour vous. Cela fonctionne comme convocation d’animal, excepté que vous convoquez une créature ordinaire qui a le trait géant et dont le niveau est de 5 ou inférieur.</p>
-<hr>
-<p><strong>Intensifié (6th)</strong> niveau 7</p>
-<p><strong>Intensifié (7th)</strong> niveau 9</p>
-<p><strong>Intensifié (8th)</strong> niveau 11</p>
-<p><strong>Intensifié (9th)</strong> niveau 13</p>
-<p><strong>Intensifié (10th)</strong> niveau 15</p>
+<hr />
+<p><strong>Intensifié (6e)</strong> niveau 7</p>
+<p><strong>Intensifié (7e)</strong> niveau 9</p>
+<p><strong>Intensifié (8e)</strong> niveau 11</p>
+<p><strong>Intensifié (9e)</strong> niveau 13</p>
+<p><strong>Intensifié (10e)</strong> niveau 15</p>
