--- a/data/spells/conjuration-05-e9UJoVYUd5kJWUpi.htm
+++ b/data/spells/conjuration-05-e9UJoVYUd5kJWUpi.htm
@@ -11,10 +11,10 @@ Nom: Convocation de géant
 <p><strong>Heightened (9th)</strong> Level 13</p>
 <p><strong>Heightened (10th)</strong> Level 15</p>
 ------ Description (fr) ------
-<p>Vous conjurez un géant qui se bat pour vous. Cela fonctionne comme convocation d’animal, excepté que vous convoquez une créature ordinaire qui a le trait géant et dont le niveau est de 5 ou inférieur.</p>
+<p>Vous conjurez un géant qui se bat pour vous. Cela fonctionne comme convocation d’animal, excepté que vous convoquez une créature ordinaire qui a le trait géant et dont le Niveau est de 5 ou inférieur.</p>
 <hr />
-<p><strong>Intensifié (6e)</strong> niveau 7</p>
-<p><strong>Intensifié (7e)</strong> niveau 9</p>
-<p><strong>Intensifié (8e)</strong> niveau 11</p>
-<p><strong>Intensifié (9e)</strong> niveau 13</p>
-<p><strong>Intensifié (10e)</strong> niveau 15</p>
+<p><strong>Intensifié (6e)</strong> Niveau 7</p>
+<p><strong>Intensifié (7e)</strong> Niveau 9</p>
+<p><strong>Intensifié (8e)</strong> Niveau 11</p>
+<p><strong>Intensifié (9e)</strong> Niveau 13</p>
+<p><strong>Intensifié (10e)</strong> Niveau 15</p>
