--- a/data/spells/conjuration-08-Oj1PJBMQD9vuwCv7.htm
+++ b/data/spells/conjuration-08-Oj1PJBMQD9vuwCv7.htm
@@ -1,7 +1,6 @@
 Name: Maze
 Nom: Dédale
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You transport the target into an extradimensional maze of eldritch origin and trap it there. Once each turn, the target can spend 1 action to attempt a Survival check or Perception check against your spell DC to escape the maze. The possible outcomes are as follows. Teleportation magic doesn't help the creature escape unless the magic can transport across planes, such as plane shift. When the spell ends, either because the target escaped or the duration ran out, the target returns to the space it occupied when it was banished, or to the nearest space if the original is now filled.</p>
