--- a/data/spells/divination-01-RztmhJrLLQWoGVdB.htm
+++ b/data/spells/divination-01-RztmhJrLLQWoGVdB.htm
@@ -14,4 +14,4 @@ Nom: Mémoire de l'objet
 <p>Si vous touchez une arme, vous devenez temporairement qualifié avec cette arme (si votre rang de maîtrise n'était pas déjà supérieur). Si vous touchez un outil, votre rang de maîtrise avec le prochain test de compétence que vous tentez avec cet outil au cours de la durée du sort (tel qu'un test de Fabrication avec le marteau d'un forgeron) passe temporairement à qualifié (si votre rang de maîtrise n'était pas déjà supérieur). Ce sort ne donne aucun avantage pour les activités qui prennent plus de temps qu'une minute pour être achevées.</p>
 <hr />
 <p><strong>Intensifié (6e)</strong> Votre rang de maîtrise passe à expert au lieu de qualifié.</p>
-<p>@Compendium[pf2e.spell-effects.uDOxq24S7IT2EcXv]{Effet : Mémoire de l'objet}</p>
+<p>@Compendium[pf2e.spell-effects.uDOxq24S7IT2EcXv]{Effet : Mémoire de l'objet (arme ou outil)}</p>
