--- a/data/spells/divination-05-9BnhadUO8FMLmeZ3.htm
+++ b/data/spells/divination-05-9BnhadUO8FMLmeZ3.htm
@@ -1,7 +1,6 @@
 Name: Mind Probe
 Nom: Sonde mentale
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You cast your thoughts through a creature's mind, sifting for information. You access the target's memories and knowledge unless it fends you off with a Will save.</p>
