--- a/data/spells/enchantment-00-f45JpY7Ph2cAJGW2.htm
+++ b/data/spells/enchantment-00-f45JpY7Ph2cAJGW2.htm
@@ -1,7 +1,6 @@
 Name: Evil Eye
 Nom: Mauvais œil
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You fix your eye on the target, imposing a malevolent hex. The target becomes frightened based on the results of its Will save. This condition value can't be reduced below 1 while the spell is active and you can see the target. Regardless of the outcome, the target is then temporarily immune for 1 minute.</p>
