--- a/data/spells/enchantment-00-IAjvwqgiDr3qGYxY.htm
+++ b/data/spells/enchantment-00-IAjvwqgiDr3qGYxY.htm
@@ -1,7 +1,6 @@
 Name: Inspire Courage
 Nom: Inspiration vaillante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You inspire yourself and your allies with words or tunes of encouragement. You and all allies in the area gain a +1 status bonus to attack rolls, damage rolls, and saves against fear effects.</p>
