--- a/data/feats/skill-01-x7EMZNMavris2aHY.htm
+++ b/data/feats/skill-01-x7EMZNMavris2aHY.htm
@@ -1,5 +1,5 @@
 Name: Student of the Canon
-Nom: Etudiant du droit canon
+Nom: Étudiant du droit canon
 PrereqEN: trained in Religion
 PrereqFR: qualifié en Religion
 État: officielle
