--- a/data/equipment/consumable-16-Odl2SyKw8Zg6ckKb.htm
+++ b/data/equipment/consumable-16-Odl2SyKw8Zg6ckKb.htm
@@ -1,7 +1,8 @@
 Name: Hail of Arrows Snare
-Nom: 
-État: vide
+Nom: Piège artisanal de volée de flèches
+État: libre
 
 ------ Description (en) ------
 
 ------ Description (fr) ------
+<p>Lorsqu'une créature rentre dans la case du piège, il relâche des centaines de flêches soigneusement préparés, couvrant un rayon de 6 m autour de la case du piège avec de larges flèvhes qui infligent 18d6 dégâts perforants. Les créatures dans la zone doivent faire un test de Réflexes basique contre un DD 37.
