--- a/data/spells/abjuration-04-ksLCg62cLOojw3gN.htm
+++ b/data/spells/abjuration-04-ksLCg62cLOojw3gN.htm
@@ -1,7 +1,6 @@
 Name: Dimensional Anchor
 Nom: Ancre dimensionnelle
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You interfere with the target's ability to teleport and travel between dimensions. Dimensional anchor attempts to counteract any teleportation effect, or any effect that would move the target to a different plane. The duration is determined by the target's Will save.</p>
