--- a/data/gmg-srd/JHQI2skcksaLMPqA.htm
+++ b/data/gmg-srd/JHQI2skcksaLMPqA.htm
@@ -1,6 +1,6 @@
 Name: Kindly Witch
-Nom: 
-État: auto-trad
+Nom: Sorcière bienveillante
+État: officielle
 
 ------ Description (en) ------
 <p>This character connected you to a kindly but reclusive person who was living at the edge of civilization but had expansive knowledge to share.</p>
