--- a/data/spells/enchantment-01-d2pi7laQkzlr3wrS.htm
+++ b/data/spells/enchantment-01-d2pi7laQkzlr3wrS.htm
@@ -1,7 +1,6 @@
 Name: Ancestral Touch
 Nom: Toucher ancestral
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You touch a creature and force them to see and feel the ancestors surrounding you. The target takes 1d4 mental damage, with results depending on a Will save.</p>
@@ -20,4 +19,4 @@ Nom: Toucher ancestral
 <p><strong>Échec</strong> La cible est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} 1 et subit la totalité des dégâts.</p>
 <p><strong>Échec critique</strong> La cible est Effrayée 2 et subit double dégâts.</p>
 <hr />
-<p>Intensifié (+1) Les dégâts mentaux augmentent de 1d4.</p>
+<p><strong>Intensifié (+1)</strong> Les dégâts mentaux augmentent de [[/r 1d4]].</p>
