--- a/data/spells/enchantment-01-BRtKFk0PKfWIlCAB.htm
+++ b/data/spells/enchantment-01-BRtKFk0PKfWIlCAB.htm
@@ -14,9 +14,10 @@ Nom: Doux rêve
 <p>If you Cast this Spell again, the effects of any previous sweet dream you cast end.</p>
 ------ Description (fr) ------
 <p>Avec une chanson ou un conte apaisants, vous entraînez la cible dans un rêve enchanteur.</p>
-<p>Quand vous lancez le sort, la cible tombe @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{inconsciente} si elle ne l’était pas déjà. Tant qu’elle est inconsciente , elle vit un rêve de votre choix. Si elle dort pendant au moins 1 min, elle gagne l’avantage du rêve pour le restant de la durée du sort.</p>
+<p>Quand vous lancez le sort, la cible tombe @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{inconsciente} si elle ne l’était pas déjà. Tant qu’elle est inconsciente , elle vit un rêve de votre choix. Si elle dort pendant au moins 1 minute, elle gagne l’avantage du rêve pour le restant de la durée du sort.</p>
 <ul>
-<li><strong>Rêve de perspicacité</strong> bonus de statut de +1 aux tests de compétence basés sur l’Intelligence.</li>
-<li><strong>Rêve de charme</strong> bonus de statut de +1 aux tests de compétence basés sur le Charisme.</li>
-<li><strong>Rêve de voyage</strong> bonus de statut de + 1,5 m à la Vitesse.</li>
+<li><strong>@Compendium[pf2e.spell-effects.v051JKN0Dj3ve5cF]{Rêve de perspicacité}</strong> bonus de statut de +1 aux tests de compétence basés sur l’Intelligence.</li>
+<li><strong>@Compendium[pf2e.spell-effects.MJSoRFfEdM4j5mNG]{Rêve de charme}</strong> bonus de statut de +1 aux tests de compétence basés sur le Charisme.</li>
+<li><strong>@Compendium[pf2e.spell-effects.sE2txm68yZSFMV3v]{Rêve de voyage}</strong> bonus de statut de + 1,5 m à la Vitesse.</li>
 </ul>
+<p>Si vous Lancez ce sort de nouveau, les effets de tout autre Doux rève antérieur que vous avez lancés s'achèvent.</p>
