--- a/data/spells/enchantment-01-k2QrUk7jWMAWozMh.htm
+++ b/data/spells/enchantment-01-k2QrUk7jWMAWozMh.htm
@@ -9,7 +9,6 @@ Nom: Drain du cerveau
 <hr />
 <p><strong>Heightened (+1)</strong> The mental damage increases by 1d8.</p>
 ------ Description (fr) ------
-<p>Vous sondez l'esprit de la cible pour y glaner des connaissances.</p>
-<p>Cela inflige [[/r 1d8 #mentaux]] dégâts mentaux avec un jet de Volonté basique. Si la cible obtient un échec, vous triez parmi ces souvenirs volés pour tenter un unique test pour @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir}. Choisissez une compétence permettant l'action de Se souvenir et utilisez le modificateur de compétence de la cible pour ce test.</p>
+<p>Vous sondez l'esprit de la cible pour y glaner des connaissances. Cela inflige [[/r 1d8 #mentaux]] dégâts mentaux avec un jet de Volonté basique. Si la cible obtient un échec, vous triez parmi ces souvenirs volés pour tenter un unique test pour @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir}. Choisissez une compétence permettant l'action de Se souvenir et utilisez le modificateur de compétence de la cible pour ce test.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts mentaux augmentent de [[/r 1d8 #mentaux]].</p>
