--- a/data/spells/enchantment-01-pBevG6bSQOiyflev.htm
+++ b/data/spells/enchantment-01-pBevG6bSQOiyflev.htm
@@ -1,7 +1,6 @@
 Name: Befuddle
 Nom: Embrouiller
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You sow seeds of confusion in your target's mind, causing their actions and thoughts to become clumsy.</p>
