--- a/data/spells/enchantment-01-KMFRKzNCq7hVNH7H.htm
+++ b/data/spells/enchantment-01-KMFRKzNCq7hVNH7H.htm
@@ -1,7 +1,6 @@
 Name: Charming Words
 Nom: Paroles charmeuses
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You whisper enchanting words to deflect your foe's ire. The target must attempt a Will save.</p>
@@ -11,10 +10,9 @@ Nom: Paroles charmeuses
 <p><strong>Failure</strong> The target can't use hostile actions against you.</p>
 <p><strong>Critical Failure</strong> The target is @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Stunned 1} and can't use hostile actions against you.</p>
 ------ Description (fr) ------
-<p>Vous murmurez des paroles envoûtantes pour détourner la colère de votre ennemi.</p>
-<p>La cible doit faire un jet de Volonté.</p>
+<p>Vous murmurez des paroles envoûtantes pour détourner la colère de votre ennemi. La cible doit faire un jet de Volonté.</p>
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
 <p><strong>Succès</strong> La cible subit un malus de circonstances de −1 aux jets d’attaque et de dégâts contre vous.</p>
 <p><strong>Échec</strong> La cible ne peut pas faire d’actions hostiles contre vous.</p>
-<p><strong>Échec critique</strong>  La cible est étourdie (@JournalEntry[Stunned]) 1 et ne peut pas faire d’actions hostiles contre vous </p>
+<p><strong>Échec critique</strong>  La cible est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} 1 et ne peut pas faire d’actions hostiles contre vous </p>
