--- a/data/spells/enchantment-01-ut9IhJ9jSZSHDUop.htm
+++ b/data/spells/enchantment-01-ut9IhJ9jSZSHDUop.htm
@@ -1,7 +1,6 @@
 Name: Charming Touch
 Nom: Contact charmeur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You infuse your target with attraction, causing it to act friendlier toward you. The target attempts a Will save. It gains a +4 circumstance bonus to this save if you or your allies recently threatened or were hostile to it. You can Dismiss the spell. If you use hostile actions against the target, the spell ends. After the spell ends, the target doesn't necessarily realize it was charmed unless its friendship with you or the actions you convinced it to take clash with its expectations, which could potentially allow you to convince the target to continue being your friend via mundane means.</p>
@@ -17,7 +16,7 @@ Nom: Contact charmeur
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée et sait que vous avez tenté de la charmer.</p>
 <p><strong> Succès</strong> La cible n’est pas affectée, mais pense que votre sort était quelque chose d’inoffensif et non un contact charmeur, sauf si elle identifie le sort.</p>
-<p><strong>Échec</strong>  La cible devient @Compendium[pf2e.conditionitems.v66R7FdOf11l94im]{amicale} avec vous. Si elle était déjà amicale, elle devient @Compendium[pf2e.conditionitems.v44P3WUcU1j0115l]{serviable}. Elle ne peut pas utiliser d’action hostile contre vous.</p>
+<p><strong>Échec</strong>  La cible devient @Compendium[pf2e.conditionitems.v66R7FdOf11l94im]{amicale} avec vous. Si elle était déjà amicale, elle devient @Compendium[pf2e.conditionitems.v44P3WUcU1j0115l]{Serviable}. Elle ne peut pas utiliser d’action hostile contre vous.</p>
 <p><strong>Échec critique</strong> La cible est serviable et ne peut pas utiliser d’action hostile contre vous.</p>
 <hr />
 <p><strong> Intensifié (4e)</strong> Vous pouvez cibler n’importe quel type de créature, pas seulement les humanoïdes, tant qu’elle peut vous trouver attirant.</p>
