--- a/data/spells/enchantment-02-tlSE7Ly8vi1Dgddv.htm
+++ b/data/spells/enchantment-02-tlSE7Ly8vi1Dgddv.htm
@@ -1,7 +1,6 @@
 Name: Hideous Laughter
 Nom: Fou rire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The target is overtaken with uncontrollable laughter. It must attempt a Will save.</p>
