--- a/data/spell-effects/01-GhNVAYtoF5hK3AlD.htm
+++ b/data/spell-effects/01-GhNVAYtoF5hK3AlD.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Touch of Corruption
-Nom: Toucher de corruption
+Nom: Effet : Toucher de corruption
 État: libre
 
 ------ Description (en) ------
