--- a/data/spell-effects/01-alyNtkHLNnt98Ewz.htm
+++ b/data/spell-effects/01-alyNtkHLNnt98Ewz.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Accelerating Touch
-Nom: Effet : Imposition des mains
+Nom: Effet : Contact accélérant
 État: libre
 
 ------ Description (en) ------
