--- a/data/spell-effects/01-lyLMiauxIVUM3oF1.htm
+++ b/data/spell-effects/01-lyLMiauxIVUM3oF1.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Lay on Hands
-Nom: Imposition des mains
+Nom: Effet : Imposition des mains
 État: libre
 
 ------ Description (en) ------
