--- a/data/spell-effects/Gqy7K6FnbLtwGpud.htm
+++ b/data/spell-effects/Gqy7K6FnbLtwGpud.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Bless
-Nom: Effet de sort : Bénédiction
+Nom: Effet : Bénédiction
 État: libre
 
 ------ Description (en) ------
