sorts enchantement changés

--- a/data/spells/enchantment-05-GP3wewkQXEPrLxYj.htm
+++ b/data/spells/enchantment-05-GP3wewkQXEPrLxYj.htm
@@ -1,7 +1,6 @@
 Name: Subconscious Suggestion
 Nom: Suggestion subconsciente
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You implant a subconscious suggestion deep within the target's mind for them to follow when a trigger you specify occurs (as described on page 305). You suggest a course of action to the target. Your directive must be phrased in such a way as to seem like a logical course of action to the target, and it can't be self-destructive or obviously against the target's self-interest. The target must attempt a Will save.</p>
@@ -15,7 +14,7 @@ Nom: Suggestion subconsciente
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée et sait que vous avez tenté de la contrôler.</p>
 <p><strong>Succès</strong> La cible n’est pas affectée et pense que vous lui avez parlé normalement, sans lui lancer de sort.</p>
-<p><strong>Échec</strong> La suggestion reste dans le subconscient de la cible jusqu’à la prochaine fois que vous préparez le sort. Si le déclencheur se produit avant cela, la cible suit immédiatement votre suggestion. L’effet prend fin au bout d’1 min ou quand la cible a complètement achevé la suggestion, ou si la suggestion devient autodestructrice ou a d’autres effets négatifs évidents.</p>
+<p><strong>Échec</strong> La suggestion reste dans le subconscient de la cible jusqu’à la prochaine fois que vous préparez le sort. Si le déclencheur se produit avant cela, la cible suit immédiatement votre suggestion. L’effet prend fin au bout d’1 minute ou quand la cible a complètement achevé la suggestion ou si la suggestion devient autodestructrice ou a d’autres effets négatifs évidents.</p>
 <p><strong>Échec critique</strong> Comme l’échec, mais la durée est d’une heure.</p>
 <hr />
 <p><strong>Intensifié (9e)</strong> Vous pouvez viser jusqu’à 10 créatures.</p>
