--- a/data/spells/enchantment-05-GaRQlC9Yw1BGKHfN.htm
+++ b/data/spells/enchantment-05-GaRQlC9Yw1BGKHfN.htm
@@ -1,7 +1,6 @@
 Name: Crushing Despair
 Nom: Désespoir foudroyant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You inflict despair on creatures in the area. The effects for each creature are determined by its Will save.</p>
@@ -17,7 +16,7 @@ Nom: Désespoir foudroyant
 <hr />
 <p><strong>Succès critique</strong> La créature n’est pas affectée.</p>
 <p><strong>Succès</strong>  Pendant 1 round, la créature ne peut pas faire de réaction et doit faire un autre jet de sauvegarde au début de son tour. Si elle échoue, elle est @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralentie} 1 pendant ce tour, secouée de sanglots incontrôlables.</p>
-<p><strong>Échec</strong> Pendant 1 round, la créature ne peut pas faire de réaction et doit faire un autre jet de sauvegarde au début de son tour. Si elle échoue, elle est @Compendium[pf2e.conditionspf2e.xYTAsEpcJE1Ccni3]{ralentie} 1 pendant 1mn, secouée de sanglots incontrôlables.</p>
-<p><strong>Échec critique</strong>  Comme l’échec, mais la créature est automatiquement @Compendium[pf2e.conditionspf2e.xYTAsEpcJE1Ccni3]{ralentie} pendant 1 minute.</p>
+<p><strong>Échec</strong> Pendant 1 round, la créature ne peut pas faire de réaction et doit faire un autre jet de sauvegarde au début de son tour. Si elle échoue, elle est Ralentie 1 pendant 1 minute, secouée de sanglots incontrôlables.</p>
+<p><strong>Échec critique</strong> Comme l’échec, mais la créature est automatiquement Ralentie pendant 1 minute.</p>
 <hr />
 <p><strong>Intensifié (7e)</strong> La zone devient un cône de 18 m.</p>
