--- a/data/spells/enchantment-06-OsOhx3TGIZ7AhD0P.htm
+++ b/data/spells/enchantment-06-OsOhx3TGIZ7AhD0P.htm
@@ -1,7 +1,6 @@
 Name: Dominate
 Nom: Domination
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You take command of the target, forcing it to obey your orders. If you issue an obviously self-destructive order, the target doesn't act until you issue a new order. The effect depends on its Will save.</p>
@@ -17,7 +16,7 @@ Nom: Domination
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
 <p><strong>Succès</strong> La cible est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} 1 tandis qu’elle résiste à vos ordres.</p>
-<p><strong>Échec</strong> La cible obéit, mais a droit à un jet de Volonté à la fin de chacun de ses tours. Sur un succès, le sort se termine.</p>
-<p><strong>Échec critique</strong>Comme l’échec, mais la cible a droit à un nouveau jet de Volonté uniquement si vous lui donnez un nouvel ordre allant à l’encontre de sa nature, comme de tuer ses alliés.</p>
+<p><strong>Échec</strong> Vous contrôlez la cible. Elle obtient l'état @Compendium[pf2e.conditionitems.9qGBRpbX9NEwtAAr]{Contrôlé} mais a droit à un jet de Volonté à la fin de chacun de ses tours. Sur un succès, le sort se termine.</p>
+<p><strong>Échec critique</strong> Comme l’échec, mais la cible a droit à un nouveau jet de Volonté uniquement si vous lui donnez un nouvel ordre allant à l’encontre de sa nature, comme de tuer ses alliés.</p>
 <hr />
 <p><strong>Intensifié (10e)</strong> La durée est illimitée.</p>
