--- a/data/spells/enchantment-07-0JigNJDRwevZOyjI.htm
+++ b/data/spells/enchantment-07-0JigNJDRwevZOyjI.htm
@@ -1,7 +1,6 @@
 Name: Soothing Ballad
 Nom: Ballade apaisante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>You draw upon your muse to soothe your allies. Choose one of the following three effects: </span></p>
@@ -20,4 +19,4 @@ Nom: Ballade apaisante
 <li>Le sort restaure 7d8 points de vie aux cibles.</li>
 </ul>
 <hr />
-<p><strong>Intensifié (+1)</strong> Quand vous l’utilisez pour soigner, <em>ballade apaisante</em> restaure 1d8 points de vie de plus.</p>
+<p><strong>Intensifié (+1)</strong> Quand vous l’utilisez pour soigner, Ballade apaisante restaure 1d8 points de vie de plus.</p>
