--- a/data/spells/enchantment-08-7PJSqUeKxTqOVrPk.htm
+++ b/data/spells/enchantment-08-7PJSqUeKxTqOVrPk.htm
@@ -1,7 +1,6 @@
 Name: Power Word Stun
 Nom: Mot de pouvoir étourdissant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You stun the target with an arcane word of power. Once targeted, the target is then temporarily immune for 10 minutes.</p>
@@ -17,7 +16,7 @@ Nom: Mot de pouvoir étourdissant
 <p>Vous étourdissez la cible avec un mot de pouvoir arcanique.</p>
 <p>Une fois ciblée, la cible est ensuite temporairement immunisée pendant dix minutes. L’effet du sort dépend du niveau de la cible.</p>
 <ul>
-<li><strong>13 ou moins</strong> La cible est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} pendant 1d6 rounds.</li>
+<li><strong>13 ou moins</strong> La cible est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} pendant [[/r 1d6 #rounds]] rounds.</li>
 <li><strong>14–15</strong> La cible est Étourdie pendant 1 round.</li> 
 <li><strong>16 ou plus</strong> La cible est Étourdie 1.</li>
 </ul>
