sorts évocation changés

--- a/data/spells/evocation-00-gYjPm7YwGtEa1oxh.htm
+++ b/data/spells/evocation-00-gYjPm7YwGtEa1oxh.htm
@@ -1,7 +1,6 @@
 Name: Ray of Frost
 Nom: Rayon de givre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You blast an icy ray. Make a spell attack roll. The ray deals cold damage equal to 1d4 + your spellcasting ability modifier.</p>
@@ -16,5 +15,6 @@ Nom: Rayon de givre
 <hr />
 <p><strong>Succès critique</strong> La cible subit le double des dégâts et un malus de statut de −3 m à ses Vitesses pendant 1 round.</p>
 <p><strong>Succès</strong>La cible reçoit les dégâts normaux.</p>
+<p>@Compendium[pf2e.spell-effects.I4PsUAaYSUJ8pwKC]{Effet: Rayon de givre}</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d4.</p>
