--- a/data/spells/evocation-00-60sgbuMWN0268dB7.htm
+++ b/data/spells/evocation-00-60sgbuMWN0268dB7.htm
@@ -10,8 +10,9 @@ Nom: Projectile télékinésique
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 1d6.</p>
 ------ Description (fr) ------
-<p>Vous lancez à la cible un objet mal fixé non porté qui se trouve à portée et qui a un Encombrement de 1 ou inférieur. Faites une attaque de sort contre la cible. Si vous touchez, vous infligez un montant de dégâts contondants, perforants ou tranchants − tels qu’appropriés pour l’objet que vous lancez − égal à 1d6 plus votre modificateur de caractéristique d’incantation. Aucun trait spécifique ou propriété magique de l’objet lancé n’affecte l’attaque ou les dégâts.</p>
-<p><strong>Succès critique.</strong>  Vous infligez le double de dégâts.</p>
-<p><strong> Succès<strong> Vous infligez la totalité des dégâts.</p>
-<hr>
-<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d6.</p>
+<p>Vous lancez à la cible un objet mal fixé non porté qui se trouve à portée et qui a un Encombrement de 1 ou inférieur. Faites une attaque de sort contre la cible. Si vous touchez, vous infligez un montant de dégâts contondants, perforants ou tranchants − appropriés à l’objet que vous lancez − égal à [[r /1d6]] plus votre modificateur de caractéristique d’incantation. Aucun trait spécifique ou propriété magique de l’objet lancé n’affecte l’attaque ou les dégâts.</p>
+<hr />
+<p><strong>Succès critique</strong>  Vous infligez le double de dégâts.</p>
+<p><strong>Succès<strong> Vous infligez la totalité des dégâts.</p>
+<hr />
+<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de [[r /1d6]].</p>
