--- a/data/spells/evocation-01-6UafOE1ZUbHamsZJ.htm
+++ b/data/spells/evocation-01-6UafOE1ZUbHamsZJ.htm
@@ -1,7 +1,6 @@
 Name: Dim the Light
 Nom: Diminuer la lumière
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You cast a darkness or shadow spell.</p>
@@ -11,4 +10,4 @@ Nom: Diminuer la lumière
 <p><strong>Déclencheur</strong> Vous lancez un sort d'obscurité ou d'ombre.</p>
 <hr />
 <p>Vous magnifiez l'obscurité de l'effet déclencheur, ce qui fait que le niveau de lumière ambiante vacille brièvement pour que vous puissiez glisser hors de vue.</p>
-<p>Vous pouvez immédiatement essayer un test de Discrétion pour @Compendium[pf2e.actionspf2e.XMcnh4cSI32tljXa]{Vous cacher} et vous pouvez devenir @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} pour une créature même si vous ne disposez pas d'un abri et n'êtes pas autrement Masqué au regard de cette créature. Vous cessez d'être <a draggable="true" data-pack="pf2e.conditionitems" data-id="iU0fEDdBp3rXpTMC">Caché</a> à la fin de votre tour, à moins de vous placer derrière un abri ou de devenir @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} avant cela.</p>
+<p>Vous pouvez immédiatement essayer un test de Discrétion pour @Compendium[pf2e.actionspf2e.XMcnh4cSI32tljXa]{Vous cacher} et vous pouvez devenir @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} pour une créature même si vous ne disposez pas d'un abri et n'êtes pas autrement Masqué au regard de cette créature. Vous cessez d'être Caché à la fin de votre tour, à moins de vous placer derrière un abri ou de devenir @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} avant cela.</p>
