--- a/data/spells/evocation-01-mlNYROcFrUF8nFgk.htm
+++ b/data/spells/evocation-01-mlNYROcFrUF8nFgk.htm
@@ -12,7 +12,7 @@ Nom: Aspersion d'étoiles
 <hr />
 <p><strong>Heightened (+1)</strong> Increase the damage by 1d4.</p>
 ------ Description (fr) ------
-<p>Vous lancez une aspersion d'infimes étoiles filantes infligeant [[/r 1d4 #feu]] dégâts de feu. Chaque créature dans la zone doit tenter un jet de Réflexes.</p>
+<p>D'une chiquenaude, vous lancez d'infimes étoiles filantes infligeant [[/r 1d4 #feu]] dégâts de feu. Chaque créature dans la zone doit tenter un jet de Réflexes.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts et est @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round.</p>
