sorts évocation changés

--- a/data/spells/evocation-02-ynm8JIU3sc3qUMpa.htm
+++ b/data/spells/evocation-02-ynm8JIU3sc3qUMpa.htm
@@ -1,7 +1,6 @@
 Name: Continual Flame
 Nom: Flamme éternelle
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A magical flame springs up from the object, as bright as a torch. It doesn't need oxygen, react to water, or generate heat.</p>
@@ -22,12 +21,12 @@ Nom: Flamme éternelle
 <hr />
 <p><strong>Intensifié (+1)</strong> Le coût augmente comme suit :</p>
 <ul>
-    <li>16 po au niveau 3,</li>
-    <li>30 po au niveau 4,</li>
-    <li>60 po au niveau 5,</li>
-    <li>120 po au niveau 6,</li>
-    <li>270 po au niveau 7,</li>
-    <li>540 po au niveau 8,</li>
-    <li>1.350 po au niveau 9,</li>
-    <li>3.350 po au niveau 10.</li>
-    </ul>
+<li>16 po au niveau 3,</li>
+<li>30 po au niveau 4,</li>
+<li>60 po au niveau 5,</li>
+<li>120 po au niveau 6,</li>
+<li>270 po au niveau 7,</li>
+<li>540 po au niveau 8,</li>
+<li>1.350 po au niveau 9,</li>
+<li>3.350 po au niveau 10.</li>
+</ul>
