--- a/data/spells/evocation-02-wzLkNU3AAqOSKFPR.htm
+++ b/data/spells/evocation-02-wzLkNU3AAqOSKFPR.htm
@@ -1,7 +1,6 @@
 Name: Sound Burst
 Nom: Cacophonie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A cacophonous noise blasts out, dealing 2d10 sonic damage. Each creature must attempt a Fortitude save.</p>
@@ -14,13 +13,10 @@ Nom: Cacophonie
 <p><strong>Heightened (+1)</strong> The damage increases by 1d10.</p>
 ------ Description (fr) ------
 <p>Un bruit cacophonique explose et inflige 2d10 dégâts de son. Chaque créature doit effectuer un jet de Vigueur</p>
-<p>
-<hr><b>Succès critique</b> La créature n’est pas affectée.</p>
-<p>
-<b>Succès</b> La créature reçoit la moitié des dégâts.</p>
-<p>
-<b>Échec</b> La créature reçoit la totalité des dégâts et est @Compendium[pf2e.conditionspf2e.9PR9y0bi4JPKnHPR]{sourde} pendant 1 round.</p>
-<p>
-<b>Échec critique</b> La créature reçoit des dégâts doublés, est @Compendium[pf2e.conditionspf2e.9PR9y0bi4JPKnHPR]{sourde} pendant 1 min et @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{étourdie} 1.</p>
-<p>
-<hr><b>Intensifié (+1)</b> Les dégâts augmentent de 1d10.</p>
+<hr />
+<p><strong>Succès critique</strong> La créature n’est pas affectée.</p>
+<p><strong>Succès</strong> La créature reçoit la moitié des dégâts.</p>
+<p><strong>Échec</strong> La créature reçoit la totalité des dégâts et est @Compendium[pf2e.conditionspf2e.9PR9y0bi4JPKnHPR]{Sourde} pendant 1 round.</p>
+<p><strong>Échec critique</strong> La créature reçoit des dégâts doublés, est Sourde pendant 1 minute et @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{Étourdie} 1.</p>
+<hr />
+<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d10.</p>
