--- a/data/spells/evocation-03-B8aCUMCHCIMUCEVK.htm
+++ b/data/spells/evocation-03-B8aCUMCHCIMUCEVK.htm
@@ -1,7 +1,6 @@
 Name: Elemental Motion
 Nom: Mobilité élémentaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You call upon your element to propel you, improving your Speed depending on your element. This spell has your element's trait. Air You gain a fly Speed equal to your Speed. Earth You gain a burrow Speed of 10 feet. Fire You gain a fly Speed equal to your Speed. Water You gain a swim Speed equal to your Speed and can breathe underwater.</p>
@@ -9,7 +8,13 @@ Nom: Mobilité élémentaire
 <p><strong>Heightened (6th)</strong> You also gain a +10-foot status bonus to your Speeds.</p>
 <p><strong>Heightened (9th)</strong> The status bonus increases to +20 feet.</p>
 ------ Description (fr) ------
-<p>Vous invoquez votre élément pour qu’il vous propulse à sa façon, en améliorant votre Vitesse. Ce sort possède le trait de votre élément. Air  Vous gagnez une Vitesse de vol égale à votre Vitesse. Terre  Vous gagnez une Vitesse de creusement de 3 m. Feu Vous gagnez une Vitesse de vol égale à votre Vitesse. Eau Vous gagnez une Vitesse de nage égale à votre Vitesse et pouvez respirer sous l’eau.</p>
-<hr>
-<p><strong>Intensifié (6th)</strong> Vous gagnez un bonus de statut de +3 m à vos Vitesses.</p>
-<p><strong>Intensifié (9th)</strong> Le bonus de statut passe à +6 m.</p>
+<p>Vous invoquez votre élément pour qu’il vous propulse à sa façon, en améliorant votre Vitesse. Ce sort possède le trait de votre élément.</p>
+<ul>
+<li><strong>Air</strong> Vous gagnez une Vitesse de vol égale à votre Vitesse.</li>
+<li><strong>Terre</strong> Vous gagnez une Vitesse de creusement de 3 m.</li>
+<li><strong>Feu</strong> Vous gagnez une Vitesse de vol égale à votre Vitesse.</li>
+<li><strong>Eau</strong> Vous gagnez une Vitesse de nage égale à votre Vitesse et pouvez respirer sous l’eau.</li>
+</ul>
+<hr />
+<p><strong>Intensifié (6e)</strong> Vous gagnez un bonus de statut de +3 m à vos Vitesses.</p>
+<p><strong>Intensifié (9e)</strong> Le bonus de statut passe à +6 m.</p>
