--- a/data/spells/evocation-03-DyiD239dNS7RIxZE.htm
+++ b/data/spells/evocation-03-DyiD239dNS7RIxZE.htm
@@ -1,7 +1,6 @@
 Name: Searing Light
 Nom: Lumière brûlante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You shoot a blazing ray of light tinged with holy energy. Make a ranged spell attack. The ray deals 5d6 fire damage. If the target is a fiend or undead, you deal an extra 5d6 good damage.</p>
@@ -13,9 +12,9 @@ Nom: Lumière brûlante
 <p><strong>Heightened (+1)</strong> The fire damage increases by 2d6, and the good damage against fiends and undead increases by 2d6.</p>
 ------ Description (fr) ------
 <p>Vous lancez un rayon de lumière flamboyant teinté d’énergie sainte. Effectuez un jet d’attaque de sort à distance. Le rayon inflige 5d6 dégâts de feu. Si la cible est un fiélon ou un mort-vivant, vous infligez 5d6 dégâts bons supplémentaires.</p>
-<p>Si le rayon traverse une zone de ténèbres magiques ou cible une créature affectée par des ténèbres magiques, lumière brillante tente de contrer les ténèbres. Pour savoir si le rayon traverse une zone de ténèbres, tracez une ligne entre la cible du sort et vous.</p>
-<hr>
+<p>Si le rayon traverse une zone de ténèbres magiques ou cible une créature affectée par des ténèbres magiques, lumière brûlante tente de contrer les ténèbres. Pour savoir si le rayon traverse une zone de ténèbres, tracez une ligne entre la cible du sort et vous.</p>
+<hr />
 <p><strong>Succès critique</strong>La cible subit le double de dégâts de feu, ainsi que le double de dégâts bons s’il s’agit d’un fiélon ou d’un mort-vivant.</p>
 <p><strong>Succès</strong> La cible reçoit la totalité des dégâts.</p>
-<hr>
+<hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts de feu augmentent de 2d6 et les dégâts bons contre les fiélons et les morts-vivants de 2d6.</p>
