--- a/data/spell-effects/06-jtW3VfI5Kktuy3GH.htm
+++ b/data/spell-effects/06-jtW3VfI5Kktuy3GH.htm
@@ -50,7 +50,7 @@ Nom: Effet : Forme de dragon (Bronze)
 <li><strong>Bronze</strong>
 <ul>
 <li>Vitesse de nage 12 mètres</li>
-<li><strong>Corps à corps</strong> Mâchoires, <strong>Dégâts</strong> 2d10 perçant plus 1d12 électricité</li>
+<li><strong>Corps à corps</strong> Mâchoires, <strong>Dégâts</strong> 2d10 perforant plus 1d12 électricité</li>
 <li><strong>Corps à corps</strong> Griffe (agile), <strong>Dégâts</strong> 3d10 tranchant</li>
 <li><strong>Corps à corps</strong> Queue (portée 3 mètres), <strong>Dégâts</strong> 3d10 contondant</li>
 <li><strong>Corps à corps</strong> Aile (portée 3 mètres), <strong>Dégâts</strong> 3d8 tranchant</li>
