sorts évocation changés

--- a/data/spells/evocation-05-3puDanGfpEt6jK5k.htm
+++ b/data/spells/evocation-05-3puDanGfpEt6jK5k.htm
@@ -1,7 +1,6 @@
 Name: Cone of Cold
 Nom: Cône de froid
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Icy cold rushes forth from your hands. You deal 12d6 cold damage to creatures in the area.</p>
@@ -9,5 +8,5 @@ Nom: Cône de froid
 <p><strong>Heightened (+1)</strong> The damage increases by 2d6.</p>
 ------ Description (fr) ------
 <p>Un froid glacial jaillit de vos mains. Vous infligez 12d6 dégâts de froid aux créatures de la zone.</p>
-<hr>
+<hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 2d6.</p>
