--- a/data/spells/evocation-05-9LHr9SuDLTicdbXs.htm
+++ b/data/spells/evocation-05-9LHr9SuDLTicdbXs.htm
@@ -1,7 +1,6 @@
 Name: Hellfire Plume
 Nom: Volute de feu infernal
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You call forth a plume of hellfire that erupts from below, dealing 4d6 fire damage and 4d6 evil damage.</p>
@@ -9,5 +8,5 @@ Nom: Volute de feu infernal
 <p><strong>Heightened (+1)</strong> The fire damage increases by 1d6, and the evil damage increases by 1d6.</p>
 ------ Description (fr) ------
 <p>Vous invoquez une volute de feu infernal qui jaillit du sol en infligeant 4d6 dégâts de feu et 4d6 dégâts mauvais.</p>
-<hr>
+<hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts de feu et les dégâts mauvais augmentent de 1d6.</p>
