--- a/data/spells/evocation-04-VmqdVWCb8zAUCW8S.htm
+++ b/data/spells/evocation-04-VmqdVWCb8zAUCW8S.htm
@@ -1,7 +1,6 @@
 Name: Debilitating Dichotomy
 Nom: Dichotomie débilitante
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You reveal a glimpse of the impossible conflicts between the<br />divine anathema behind your curse, forcing you to reckon<br />with another's conflicts as well.</p>
@@ -9,6 +8,6 @@ Nom: Dichotomie débilitante
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 3d6.</p>
 ------ Description (fr) ------
-<p>Vous révélez à un autre un aperçu des terribles conflits de l'anathème divin qui se cache derrière votre malédiction, vous forçant à prendre connaissance des conflits qui agitent l'autre également. Vous et la cible subissez chacun [[/r 9d6 #mental]] dégâts mentaux avec un jet de sauvegarde basique et la cible est @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{Étourdie} 1 si elle obtient un échec critique à son jet de sauvegarde. Vous obtenez un degré de succès de plus que celui que vous avez obtenu au dé à votre jet de sauvegarde.</p>
-<hr>
+<p>Vous révélez à un autre un aperçu des terribles conflits de l'anathème divin qui se cache derrière votre malédiction, vous forçant à prendre connaissance des conflits qui agitent l'autre également. Vous et la cible subissez chacun [[/r 9d6 #mental]] dégâts mentaux avec un jet de sauvegarde basique et la cible est @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{Étourdie} 1 si elle obtient un échec critique à son jet de sauvegarde. Vous obtenez un résultat d'un degré de succès supérieur à celui que vous avez obtenu à votre jet de sauvegarde.</p>
+<hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de [[/r 3d6 #mental]].</p>
