--- a/data/spell-effects/06-ETgzIIv3M2zvclAR.htm
+++ b/data/spell-effects/06-ETgzIIv3M2zvclAR.htm
@@ -50,10 +50,10 @@ Nom: Effet : Forme de dragon (Bleu)
 <li><strong>Bleu</strong>
 <ul>
 <li>vitesse de creusement 6 mètres</li>
-<li><strong>Melee</strong> Mâchoires, <strong>Dégâts</strong> 2d10 perforants plus 1d12 électricité</li>
-<li><strong>Melee</strong> Griffe (agile), <strong>Dégâts</strong> 3d10 tranchant</li>
-<li><strong>Melee</strong> Queue (portée 3 mètres), <strong>Dégâts</strong> 3d10 contondant</li>
-<li><strong>Melee</strong> Cornes (portée 3 mètres), <strong>Dégâts</strong> 3d8 perforant</li>
+<li><strong>Corps à corps</strong> Mâchoires, <strong>Dégâts</strong> 2d10 perforants plus 1d12 électricité</li>
+<li><strong>Corps à corps</strong> Griffe (agile), <strong>Dégâts</strong> 3d10 tranchant</li>
+<li><strong>Corps à corps</strong> Queue (portée 3 mètres), <strong>Dégâts</strong> 3d10 contondant</li>
+<li><strong>Corps à corps</strong> Cornes (portée 3 mètres), <strong>Dégâts</strong> 3d8 perforant</li>
 <li>Souffle : ligne de 24 mètres, [[/r 6d12 #électricité]] électricité</li>
 </ul>
 <hr />
