sorts changés évocation (fin)

--- a/data/spells/evocation-08-BKIet436snMNcnez.htm
+++ b/data/spells/evocation-08-BKIet436snMNcnez.htm
@@ -10,6 +10,9 @@ Nom: Rayon polaire
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 2d8</p>
 ------ Description (fr) ------
-<p>Vous tirez un rayon blanc bleuté d’air glacial et de grésil tourbillonnant capable de geler votre cible jusqu’aux os. Vous devez réussir un jet d’attaque de sort pour affecter la cible qui subit alors 10d8 dégâts de froid et reçoit l’état @Compendium[pf2e.conditionspf2e.4D2KBtexWXa6oUMR]{Drainé} 2.</p>
+<p>Vous tirez un rayon blanc bleuté d’air glacial et de grésil tourbillonnant qui inflige 10d8 dégâts de froid. Vous devez réussir un jet d’attaque de sort pour affecter la cible.</p>
+<hr />
+<p><strong>Succès critique</strong> La cible subit double dégâts et est @Compendium[pf2e.conditionspf2e.4D2KBtexWXa6oUMR]{Drainée} 2.</p>
+<p><strong>Succès</strong> La cible subit les dégâts et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée} 2</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 2d8.</p>
