--- a/data/spells/evocation-08-x7SPrsRxGb2Vy2nu.htm
+++ b/data/spells/evocation-08-x7SPrsRxGb2Vy2nu.htm
@@ -1,7 +1,6 @@
 Name: Earthquake
 Nom: Tremblement de terre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You shake the ground, topple creatures into fissures, and collapse structures. The GM might add additional effects in certain areas. Cliffs might collapse, causing creatures to fall, or a lake might drain as fissures open up below its surface, leaving a morass of quicksand.</p>
@@ -27,7 +26,7 @@ Nom: Tremblement de terre
 <hr />
 <p><strong>Succès critique</strong> La créature reçoit la moitié des dégâts de l’effondrement.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts de l’effondrement et tombe @Compendium[pf2e.conditionspf2e.j91X7x0XSomq8d60]{À terre}.</p>
-<p><strong>Échec</strong> La créature reçoit la totalité des dégâts de l’effondrement et tombe @Compendium[pf2e.conditionspf2e.j91X7x0XSomq8d60]{À terre}.</p>
+<p><strong>Échec</strong> La créature reçoit la totalité des dégâts de l’effondrement et tombe À terre.</p>
 <p><strong>Échec critique</strong> La créature reçoit la totalité des dégâts de l’effondrement et tombe dans une crevasse.</p>
 <hr />
 <p><strong>Intensifié (10e)</strong> Vous créez un séisme massif capable de détruire une communauté. La portée passe à 750 m et la zone devient une explosion de 375 m.</p>
