--- a/data/spells/evocation-09-4WS7HrFjwNvTn8T2.htm
+++ b/data/spells/evocation-09-4WS7HrFjwNvTn8T2.htm
@@ -1,7 +1,6 @@
 Name: Implosion
 Nom: Implosion
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You crush the target by causing it to collapse in on itself, dealing 75 damage. The first time each round you Sustain the Spell, you must choose a new target to be subject to the same effect; the same creature can never be targeted more than once with a single casting of this spell. You also can't affect more than one creature per turn with implosion. You can't target a creature that's incorporeal, gaseous, or liquid, or otherwise lacking a solid form.</p>
