sorts illusion changés

--- a/data/spells/illusion-04-ZhLYJlOZzUB1OKoe.htm
+++ b/data/spells/illusion-04-ZhLYJlOZzUB1OKoe.htm
@@ -1,7 +1,6 @@
 Name: Trickster's Twin
 Nom: Jumeau du trompeur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You rarely settle for being in just one place. Choose a location within 100 feet of the target that the target can see. You create an illusion of yourself there that only it can see and that mimics all your actions. The target must attempt a Will save.</p>
