--- a/data/spells/illusion-04-Uqj344bezBq3ESdq.htm
+++ b/data/spells/illusion-04-Uqj344bezBq3ESdq.htm
@@ -1,7 +1,6 @@
 Name: Nightmare
 Nom: Cauchemar
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You send disturbing nightmares to your target. The next time the target falls asleep, it must attempt a Will save. If you know the target only by name and have never met them, the target gets a +4 circumstance bonus to the Will save.</p>
@@ -16,4 +15,4 @@ Nom: Cauchemar
 <p><strong>Succès critique</strong> La cible ne subit aucun effet néfaste et elle est temporairement immunisée pendant une semaine.</p>
 <p><strong>Succès</strong> La cible fait le cauchemar et en garde un souvenir déplaisant mais ne subit aucun autre effet néfaste.</p>
 <p><strong>Échec</strong> La cible fait le cauchemar et se réveille @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatiguée}.</p>
-<p><strong>Échec critique</strong> La cible fait le cauchemar, se réveille Fatiguée et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée 2 tant qu’elle reste Fatiguée.</p>
+<p><strong>Échec critique</strong> La cible fait le cauchemar, se réveille Fatiguée et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée} 2 tant qu’elle reste Fatiguée.</p>
