--- a/data/spells/illusion-04-tlcrVRqW1MSKJ5IC.htm
+++ b/data/spells/illusion-04-tlcrVRqW1MSKJ5IC.htm
@@ -1,7 +1,6 @@
 Name: Phantasmal Killer
 Nom: Assassin imaginaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You create a phantasmal image of the most fearsome creature imaginable to the target. Only the spell's target can see the killer, though you can see the vague shape of the illusion as it races forth to attack. The effect of the killer is based on the outcome of the target's Will save.</p>
