sorts nécromancie changés

--- a/data/spells/necromancy-01-BH3sUerzMb2bWnv1.htm
+++ b/data/spells/necromancy-01-BH3sUerzMb2bWnv1.htm
@@ -11,6 +11,6 @@ Nom: Appel de la tombe
 ------ Description (fr) ------
 <p>Vous tirez un rayon d’énergie répugnante. Effectuez un jet d’attaque de sort.</p>
 <hr />
-<p><b>Succès critique</b>  La cible devient @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 2 et @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralentie} 1 tant qu’elle est malade.</p>
-<p><b>Succès</b> La cible est malade 1.</p>
-<p><b>Échec</b> La cible n’est pas affectée.</p>
+<p><strong>Succès critique</strong>  La cible devient @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 2 et @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralentie} 1 tant qu’elle est malade.</p>
+<p><strong>Succès</strong> La cible est Malade 1.</p>
+<p><strong>Échec</strong> La cible n’est pas affectée.</p>
