--- a/data/spells/necromancy-01-GYI4xloAgkm6tTrT.htm
+++ b/data/spells/necromancy-01-GYI4xloAgkm6tTrT.htm
@@ -1,7 +1,6 @@
 Name: Touch of Undeath
 Nom: Toucher de la non-mort
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You attack the target's life force with undeath, dealing 1d6 negative damage. The target must attempt a Fortitude save.</p>
