--- a/data/spells/necromancy-00-kcelf6IHl3L9VXXg.htm
+++ b/data/spells/necromancy-00-kcelf6IHl3L9VXXg.htm
@@ -1,7 +1,6 @@
 Name: Disrupt Undead
 Nom: Destruction de mort-vivant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You lance the target with energy. You deal 1d6 positive damage plus your spellcasting ability modifier. The target must attempt a basic Fortitude save. If the creature critically fails the save, it is also @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled 1} for 1 round.</p>
