--- a/data/spells/necromancy-00-mAMEt4FFbdqoRnkN.htm
+++ b/data/spells/necromancy-00-mAMEt4FFbdqoRnkN.htm
@@ -1,7 +1,6 @@
 Name: Chill Touch
 Nom: Contact glacial
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Siphoning negative energy into yourself, your hand radiates a pale darkness. Your touch weakens the living and disorients undead, possibly even causing them to flee. The effect depends on whether the target is living or undead.</p>
@@ -12,8 +11,7 @@ Nom: Contact glacial
 <hr />
 <p><strong>Heightened (+1)</strong> The negative damage to living creatures increases by 1d4.</p>
 ------ Description (fr) ------
-<p>Vous absorbez de l’énergie négative et de pâles ténèbres enveloppent votre main.</p>
-<p>Votre toucher affaiblit les vivants et désoriente les morts-vivants, les mettant éventuellement en fuite. L’effet est différent si la cible est vivante ou morte-vivante.</p>
+<p>Vous absorbez de l’énergie négative et de pâles ténèbres enveloppent votre main. Votre toucher affaiblit les vivants et désoriente les morts-vivants, les mettant possiblement en fuite. L’effet est différent si la cible est vivante ou morte-vivante.</p>
 <ul>
 <li><strong>Créature vivante</strong> Le sort inflige des dégâts d’énergie négative égaux à 1d4 plus votre modificateur d’incantation. La cible fait un jet de Vigueur basique mais en cas d’échec critique elle est aussi @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 1 pendant 1 round.</li>
 <li><strong>Créature morte-vivante</strong> La cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} pendant un round si elle rate un jet de Vigueur. Sur un échec critique, elle @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{fuit} aussi pendant un round, à moins de réussir un jet de Volonté.</li>
