--- a/data/spells/necromancy-01-2iQKhCQBijhj5Rf3.htm
+++ b/data/spells/necromancy-01-2iQKhCQBijhj5Rf3.htm
@@ -1,7 +1,6 @@
 Name: Disrupting Weapons
 Nom: Armes perturbatrices
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You infuse weapons with positive energy. Attacks with these weapons deal an extra 1d4 positive damage to undead.</p>
@@ -10,8 +9,8 @@ Nom: Armes perturbatrices
 <p><strong>Heightened (5th)</strong> Target up to three weapons, and the damage increases to 3d4 damage.</p>
 <p>@Compendium[pf2e.spell-effects.X7RD0JRxhJV9u2LC]{Spell Effect: Disrupting Weapons}</p>
 ------ Description (fr) ------
-<p>Vous imprégnez des armes d’énergie positive.</p>
-<p>Les attaques exécutées avec ces armes infligent 1d4 dégâts positifs de plus aux morts-vivants.</p>
+<p>Vous imprégnez des armes d’énergie positive. Les attaques exécutées avec ces armes infligent 1d4 dégâts positifs de plus aux morts-vivants.</p>
 <hr />
 <p><strong>Intensifié (3e)</strong> Les dégâts passent à 2d4.</p>
 <p><strong>Intensifié (5e)</strong> Vise jusqu’à trois armes, les dégâts passent à 3d4.</p>
+<p>@Compendium[pf2e.spell-effects.X7RD0JRxhJV9u2LC]{Effet: Arme perturbatrice}</p>
