--- a/data/spells/necromancy-01-D6T17BdazhNy3KPm.htm
+++ b/data/spells/necromancy-01-D6T17BdazhNy3KPm.htm
@@ -1,7 +1,6 @@
 Name: Soul Siphon
 Nom: Siphon d'âme
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You siphon off a portion of the target's soul to bolster your<br />own vitality. The target must attempt a Fortitude save or take 1d4 negative damage. You gain temporary Hit Points equal to the total amount of HP the target loses, including the HP lost from becoming @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained}.</p>
@@ -13,8 +12,7 @@ Nom: Siphon d'âme
 <hr />
 <p><strong>Heightened (+1)</strong> Increase the damage by 1d4.</p>
 ------ Description (fr) ------
-<p>Vous aspirez une portion de l'âme de la cible pour renforcer votre propre vitalité.</p>
-<p>La cible doit faire un jet de Vigueur ou subir [[/r 1d4 #négatifs]] dégâts négatifs. Vous obtenez des Points de vie temporaireségaux au montant total perdu par la cible, incluant les PV perdus du fait de devenir @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé}.</p>
+<p>Vous aspirez une portion de l'âme de la cible pour renforcer votre propre vitalité. La cible doit faire un jet de Vigueur ou subir [[/r 1d4 #négatifs]] dégâts négatifs. Vous obtenez des Points de vie temporaires égaux au montant total perdu par la cible, incluant les PV perdus du fait de devenir @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé}.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts.</p>
