--- a/data/spells/necromancy-01-gSUQlTDYoLDGAsCP.htm
+++ b/data/spells/necromancy-01-gSUQlTDYoLDGAsCP.htm
@@ -1,7 +1,6 @@
 Name: Hymn of Healing
 Nom: Hymne de guérison
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Your divine singing mends wounds and provides a temporary respite from harm. The target gains @Compendium[pf2e.bestiary-ability-glossary-srd.fJSNOw4zHGbIm4bZ]{Fast Healing} 2.</p>
@@ -10,6 +9,7 @@ Nom: Hymne de guérison
 <p><strong>Heightened (+1)</strong> The fast healing and temporary Hit Points<br />each increase by 2.</p>
 ------ Description (fr) ------
 <p>Votre chanson divine referme les blessures et procure un répit temporaire contre les blessures.</p>
-<p>La cible obtient <em>guérison accélérée</em> 2. Lorsque vous @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancez ce sort} et chaque fois que vous @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Maintenez ce sort}, la cible obtient 2 Points de vie temporaires qui durent pendant 1 round.</p>
+<p>La cible obtient @Compendium[pf2e.bestiary-ability-glossary-srd.fJSNOw4zHGbIm4bZ]{guérison accélérée} 2.</p>
+<p>Lorsque vous @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancez ce sort} et chaque fois que vous @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Maintenez ce sort}, la cible obtient 2 Points de vie temporaires qui durent pendant 1 round.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> la guérison accélérée et les points de vie temporaires augmentent chacun de 2.</p>
