--- a/data/spells/divination-00-gpzpAAAJ1Lza2JVl.htm
+++ b/data/spells/divination-00-gpzpAAAJ1Lza2JVl.htm
@@ -1,7 +1,6 @@
 Name: Detect Magic
 Nom: Détection de la magie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You send out a pulse that registers the presence of magic. You receive no information beyond the presence or absence of magic. You can choose to ignore magic you're fully aware of, such as the magic items and ongoing spells of you and your allies.</p>
