--- a/data/spells/enchantment-01-k2QrUk7jWMAWozMh.htm
+++ b/data/spells/enchantment-01-k2QrUk7jWMAWozMh.htm
@@ -1,7 +1,6 @@
 Name: Brain Drain
 Nom: Drain du cerveau
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You probe the target's mind to glean knowledge. This deals 1d8 mental damage with a basic Will save.</p>
