--- a/data/spells/enchantment-01-BRtKFk0PKfWIlCAB.htm
+++ b/data/spells/enchantment-01-BRtKFk0PKfWIlCAB.htm
@@ -1,7 +1,6 @@
 Name: Sweet Dream
 Nom: Doux rêve
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>With soothing song or tales, you lull the target into an enchanting dream. When you cast the spell, the target falls @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Unconscious} if it wasn't already. While Unconscious, it experiences a dream of your choice.</p>
