--- a/data/spells/necromancy-02-oryfsRK27jAUnziw.htm
+++ b/data/spells/necromancy-02-oryfsRK27jAUnziw.htm
@@ -1,7 +1,6 @@
 Name: Imp Sting
 Nom: Dard de diablotin
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You reproduce an imp's evil, poisonous sting, stabbing at an enemy and possibly affecting them with the devil's benumbing venom. You deal [[/r 1d4 #piercing]] piercing damage to the touched creature and afflict the creature with imp venom. If the target takes piercing damage, they also take [[/r 1d6 #evil]] evil damage and must attempt a Fortitude save.</p>
